CI images update

--- a/images/chieu-dieu-hoa-khong-goi-cao-su-18/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-cao-su-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-cao-su-18.html
 lastopen = 2024-06-10 00:19:48
 
 [search]
-lastsearch = 2024-07-30 09:48:29
+lastsearch = 2024-07-30 12:34:11
 
 [demxanh.com]
-match = 11.8%%
-title = [Hot] Bảng giá chiếu Điều Hoà mới nhất 2023
-url = https://demxanh.com/bang-gia-chieu-dieu-hoa-moi-nhat-2019.html
+match = 14.7%%
+title = Chiếu điều hòa tencel - Chiếu cao su non có mát không?
+url = https://demxanh.com/chieu-dieu-hoa-tencel-chieu-cao-su-non-co-mat-khong.html?srsltid=AfmBOooRCx6ikSjmvknc5vE56TqyDyDV0QapGatactPy7o6SM2aYATIk
 
 [shopee.vn]
 match = 23.5%%
@@ -19,7 +19,7 @@ url = https://shopee.vn/search?keyword=chiếu điều hòa cao su non 5d
 [foreverbedding.net]
 match = 32.4%%
 title = Chiếu Điều Hoà Cao Su Non Có Chống Thấm Không?
-url = https://foreverbedding.net/chieu-dieu-hoa-cao-su-non-co-chong-tham-khong
+url = https://foreverbedding.net/chieu-dieu-hoa-cao-su-non-co-chong-tham-khong?srsltid=AfmBOopXThkaUe_48cnMYR3_rWcsZnbi_Nb61ViluCM9mmxdXEsA-ARA
 
 [demchinhhang.com]
 match = 53.1%%
@@ -69,7 +69,7 @@ url = https://tchome.vn/gia-dung-doi-song-chan-chieukhoacoc-chen/chieu-dieu-hoa-
 [vtvhyundai.vn]
 match = 14.7%%
 title = RUITON - Chiếu điều hoà 1m6 x 2m (Kèm 2 vỏ gối cao su)
-url = https://vtvhyundai.vn/shoppingMall/product/xa-khoruitonchieu-dieu-hoa-1m6x2m-kem-2-vo-goi-cao-su-.30008691
+url = https://vtvhyundai.vn/shoppingMall/product/xa-khoruitonchieu-dieu-hoa-1m6x2m-kem-2-vo-goi-cao-su-.30008691?srsltid=AfmBOoruQO7U6yuyw2t72KDnYD1ypyFlxRFA2nNDU_Y-0aB9fmK22swM
 
 [dropbuy.vn]
 match = 38.2%%
@@ -97,9 +97,9 @@ title = Chiếu điều hòa là gì? Có nên sử dụng chiếu điều hòa 
 url = https://goni.vn/chieu-dieu-hoa-la-gi-co-nen-su-dung-chieu-dieu-hoa-khong/
 
 [www.lazada.vn]
-match = -5.9%%
-title = Chiếu điều hòa cao su non, chiếu điều hòa kích thước lớn ...
-url = https://www.lazada.vn/products/chieu-dieu-hoa-cao-su-non-chieu-dieu-hoa-kich-thuoc-lon-1m6x2m18x2m-chat-lieu-mem-mai-tao-cam-giac-mat-lanh-va-em-ai-khi-nam-mau-ma-bat-mat-giup-cho-can-phong-ban-tinh-te-va-sang-trong-i2232252220.html
+match = 2.9%%
+title = Size 1.8x2m - Chiếu điều hòa tencel từ cao su non êm mát
+url = https://www.lazada.vn/products/size-18x2m-chieu-dieu-hoa-tencel-tu-cao-su-non-em-mat-khong-kem-vo-goi-chat-chon-mau-dang-khoa-79-chieu-dieu-hoa-cao-su-non-chieu-cao-su-chieu-tencel-chieu-mat-mua-he-i786966766.html?srsltid=AfmBOoqC9f7q-989HSiMP7zHJy7z3uOw6Ue6qoAOh9w1bd-Ks0WWXCXq
 
 [ru9.vn]
 match = 8.8%%
