--- a/images/tham-bali-160x230/config.ini
+++ b/images/tham-bali-160x230/config.ini
@@ -4,22 +4,22 @@ url = https://www.diepxuan.com/tham-bali-160x230.html
 lastopen = 2024-06-07 00:36:14
 
 [search]
-lastsearch = 2024-07-30 06:49:15
+lastsearch = 2024-07-30 12:44:09
 
 [demxanh.com]
 match = -41.2%%
 title = Thảm trải sàn Bali siêu khuyến mại
-url = https://demxanh.com/tham-trai-san-bali.html
+url = https://demxanh.com/tham-trai-san-bali.html?srsltid=AfmBOoogUm-KqhV69Sy_Ew7dtMkaGJJLNMmhtTubf7qaqY8GVmBEzxPv
 
 [tiki.vn]
-match = -141.2%%
-title = Mua Thảm trải sàn bali cao cấp kích thước 160*230cm mã 30
-url = https://tiki.vn/tham-trai-san-bali-cao-cap-kich-thuoc-160-230cm-ma-30-p38118690.html
+match = -129.4%%
+title = Mua Thảm trải sàn bali cao cấp kích thước 160*230cm mới
+url = https://tiki.vn/tham-trai-san-bali-cao-cap-kich-thuoc-160-230cm-moi-p41436661.html?spid=41436690
 
 [www.lazada.vn]
-match = -94.1%%
-title = Thảm Bali Trải Sàn Phòng Ngủ Giá Tốt T04/2024
-url = https://www.lazada.vn/tag/tham-bali-trai-san-phong-ngu/?page=5
+match = -158.8%%
+title = Thảm Trải Sàn Nhập Khẩu 100%% Cao Cấp, Sang Trọng, ...
+url = https://www.lazada.vn/products/tham-li-bali-tham-trai-san-nhap-khau-100-cao-cap-sang-trong-120x160cm-160x230cm-trang-tri-phong-khach-phong-ngu-chup-hinhvv-i1557646010.html?srsltid=AfmBOoqjS5XNYmhViGs3r0Rf1jMjBeeSzNSpbB1cdASAJiXkQXPpw5By
 
 [thegioidemviet.vn]
 match = -152.9%%
