--- a/images/bo-ga-goi-chun-xoa-18/config.ini
+++ b/images/bo-ga-goi-chun-xoa-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-18.html
 lastopen = 2024-06-09 23:12:50
 
 [search]
-lastsearch = 2024-07-30 11:45:48
+lastsearch = 2024-07-30 12:44:30
 
 [hanvico.com.vn]
 match = 28.6%%
@@ -14,7 +14,7 @@ url = https://hanvico.com.vn/san-pham/bo-ga-chun-my-youth-my18/
 [foreverbedding.net]
 match = -33.3%%
 title = Bộ ga chun Velina V18 - Forever Bedding
-url = https://foreverbedding.net/bo-ga-chun-velina-v18
+url = https://foreverbedding.net/bo-ga-chun-velina-v18?srsltid=AfmBOoq3wm1_YRGCcthDHzJeujG_IjQ9mKcjo-jQlyrOY84YDRAWPM6L
 
 [shopee.vn]
 match = -114.3%%
@@ -39,7 +39,7 @@ url = https://songhong.info/chan-ga-goi-uc018
 [www.diepxuan.com]
 match = -9.5%%
 title = Bộ chun xoa 180x200 - Điệp Xuân
-url = https://www.diepxuan.com/bo-chun-xoa-180x200.html
+url = https://www.diepxuan.com/bo-chun-xoa-180x200.html?srsltid=AfmBOooXt9x-snAqFzegGC5m0OL6xUAtcdYetC2WgDo7gjL3MVTLmsx1
 
 [hoangkimhome.com]
 match = -90.5%%
@@ -125,4 +125,9 @@ url = https://www.sendo.vn/bo-chan-ga-goi-cotton-xoa-mau-hoa-nhu-tim-7272139.htm
 match = -66.7%%
 title = Đồ Dùng Gia Đình Chăn, ga, gối nệm chính hãng ...
 url = https://dienmaycholon.com/do-dung-gia-dinh?t=chan-ga-goi-nem
+
+[chandem.com.vn]
+match = 4.8%%
+title = Bộ chăn ga gối Litter Girl Ctt112
+url = https://chandem.com.vn/san-pham/bo-chan-ga-goi-ctt112/
 
