--- a/images/man-ren-16/config.ini
+++ b/images/man-ren-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-16.html
 lastopen = 2024-06-07 00:52:49
 
 [search]
-lastsearch = 2024-07-30 11:44:45
+lastsearch = 2024-07-30 12:47:34
 
 [quizlet.com]
 match = -170.0%%
@@ -54,7 +54,7 @@ url = https://en.wikipedia.org/wiki/Ren_Gill
 [books.google.com]
 match = -430.0%%
 title = Proceedings of the 10th West Coast Conference on Formal ...
-url = https://books.google.com/books?id=BQ93UeXC1_kC&pg=PA187&lpg=PA187&dq=man+ren+16&source=bl&ots=ftlglIHrqb&sig=ACfU3U2k-bEP0cDkCHd5MlctnJcOiB_SXA&hl=en&sa=X&ved=2ahUKEwj31q6Y-s2HAxVIMlkFHWTCBnUQ6AF6BAgZEAM
+url = https://books.google.com/books?id=BQ93UeXC1_kC&pg=PA187&lpg=PA187&dq=man+ren+16&source=bl&ots=ftlglILpn9&sig=ACfU3U2T87_CPi8L7ycDns043WKKFqOR2g&hl=en&sa=X&ved=2ahUKEwi6i6adiM6HAxV9LFkFHWTdE34Q6AF6BAgXEAM
 
 [www.phillyvoice.com]
 match = 0.0%%
