--- a/images/nem-sieu-nhe-9f-12/config.ini
+++ b/images/nem-sieu-nhe-9f-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-12.html
 lastopen = 2024-06-10 01:22:00
 
 [search]
-lastsearch = 2024-07-30 11:17:40
+lastsearch = 2024-07-30 13:17:44
 
 [www.lazada.vn]
 match = -111.1%%
@@ -17,19 +17,19 @@ title = NEM-12
 url = https://www.coastpneumatics.com/product/NEM-12/
 
 [m.facebook.com]
-match = -100.0%%
-title = HỆ THỐNG SIÊU THỊ NỆM HÀNG ĐẦU VIỆT NAM TỔNG ...
-url = https://m.facebook.com/media/set/?vanity=vuanem.vn&set=a.693142637496508
+match = -200.0%%
+title = Thấy thương chị gái bán nem nướng thật thà hỏi gì cũng khai ...
+url = https://m.facebook.com/amthucduongpho247/videos/thấy-thương-chị-gái-bán-nem-nướng-thật-thà-hỏi-gì-cũng-khai-atdp/629711951714693/
 
 [thegioinem.com]
-match = -105.6%%
-title = Bảng giá nệm Vạn Thành khuyến mãi mới nhất 2024
-url = https://thegioinem.com/bang-gia-nem-van-thanh-moi.html
+match = -55.6%%
+title = Bảng giá nệm cao su Kim Cương mới 2024
+url = https://thegioinem.com/bang-gia-nem-cao-su-kim-cuong.html
 
 [www.facebook.com]
-match = -22.2%%
-title = Tatana - Nệm Drap Gối Cao Cấp
-url = https://www.facebook.com/tatana.vn/
+match = -155.6%%
+title = Món Ngon Người Việt Houston | Mai thứ sáu 07/12/24 có ...
+url = https://www.facebook.com/groups/monngonnvh/posts/mai-thứ-sáu-071224-có-bún-nem-nướng-9bánh-bột-chiên-5chè-sương-sa-bánh-lọt-5bánh/26396130619978251/
 
 [eva.vn]
 match = -150.0%%
@@ -57,8 +57,8 @@ title = NEM Furniture JSC (@nemfurniturejsc)
 url = https://www.instagram.com/nemfurniturejsc/?hl=en
 
 [www.diepxuan.com]
-match = -111.1%%
-title = Điệp Xuân Nệm siêu nhẹ 9F 12 - Chăn ga gối đệm Điệp Xuân
+match = -55.6%%
+title = Nệm siêu nhẹ 9F 12 - Chăn ga gối đệm Điệp Xuân
 url = https://www.diepxuan.com/nem-sieu-nhe-9f-12.html
 
 [nemphuoclong.vn]
