CI images update

--- a/images/chieu-truc-que-lam-loai-2-18/config.ini
+++ b/images/chieu-truc-que-lam-loai-2-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-que-lam-loai-2-18.html
 lastopen = 2024-06-07 00:19:47
 
 [search]
-lastsearch = 2024-07-30 03:20:55
+lastsearch = 2024-07-30 13:45:38
 
 [chieutrelanlan.com]
 match = -7.1%%
@@ -22,9 +22,9 @@ title = Chiếu trúc hạt Quế Lâm hạt vàng 100x190cm hàng loại 1
 url = https://demxanh.com/chieu-truc-hat-que-lam-hat-vang.html
 
 [shopee.vn]
-match = -3.6%%
-title = Chiếu trúc Quế Lâm mắt ngọc hạt vàng bóng đẹp loại 1
-url = https://shopee.vn/Chiếu-trúc-Quế-Lâm-mắt-ngọc-hạt-vàng-bóng-đẹp-loại-1-i.121274905.7879754206
+match = 67.9%%
+title = Chiếu trúc quế lâm(hàng loại1)
+url = https://shopee.vn/Chiếu-trúc-quế-lâm(hàng-loại1)-i.33372594.4619688771
 
 [www.diepxuan.com]
 match = 28.6%%
