--- a/images/ga-ni-long-16/config.ini
+++ b/images/ga-ni-long-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-16.html
 lastopen = 2024-06-09 23:07:25
 
 [search]
-lastsearch = 2024-07-30 12:46:09
+lastsearch = 2024-07-30 13:45:19
 
 [www.georgianicols.com]
 match = -169.2%%
@@ -27,9 +27,9 @@ title = License renewal procedures
 url = https://www.iihs.org/topics/older-drivers/license-renewal-laws-table
 
 [en.wikipedia.org]
-match = -160.0%%
-title = Svara
-url = https://en.wikipedia.org/wiki/Svara
+match = 27.3%%
+title = Ga language
+url = https://en.wikipedia.org/wiki/Ga_language
 
 [www.facebook.com]
 match = -61.5%%
@@ -37,9 +37,9 @@ title = Northwest Georgia Scanner
 url = https://www.facebook.com/NWGAScanner/
 
 [www.youtube.com]
-match = -338.5%%
-title = Matto ki Saikil Official Trailer | Prakash Jha | M. Gani | In ...
-url = https://www.youtube.com/watch?v=wwH3mdjbKac
+match = -9.1%%
+title = Dynamic KML
+url = https://www.youtube.com/watch?v=QzS_shIzfcM
 
 [www.regmovies.com]
 match = -215.4%%
@@ -162,9 +162,9 @@ title =
 url = https://traceup.com/mls-next-vs-ecnl-vs-ga-best-youth-soccer-league
 
 [www.ncbi.nlm.nih.gov]
-match = -323.1%%
-title = Symptomatic oral squamous papilloma of the uvula - a rare ...
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7067511/
+match = -284.6%%
+title = Reference Ranges of Amniotic Fluid Index in Late Third ...
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4312643/
 
 [www.ice.gov]
 match = 0.0%%
@@ -237,9 +237,9 @@ title = Henny Penny EC05-001 TERM RING #10 16-14 GA NI PL
 url = https://www.partstown.com/henny-penny/henec05-001
 
 [pubs.acs.org]
-match = -338.5%%
-title = Structure and Role of a Ga-Promoter in Ni-Based Catalysts for ...
-url = https://pubs.acs.org/doi/10.1021/jacsau.3c00677
+match = -330.8%%
+title = Ni(4-tBustb)3: A Robust 16-Electron Ni(0) Olefin Complex for ...
+url = https://pubs.acs.org/doi/10.1021/acs.organomet.0c00485
 
 [www.postercompliance.com]
 match = -207.7%%
@@ -477,9 +477,9 @@ title = Georgia Rest Areas: Roadside GA Rest Stops | Maps | Facility
 url = https://www.georgiarestareas.com/
 
 [www.sciencedirect.com]
-match = -300.0%%
-title = Highly mobile twin boundaries in seven-layer modulated Ni ...
-url = https://www.sciencedirect.com/science/article/pii/S1359646219306359
+match = -215.4%%
+title = Acta Materialia | ScienceDirect.com by Elsevier
+url = https://www.sciencedirect.com/journal/acta-materialia/articles-in-press
 
 [www.cvlga.org]
 match = -138.5%%
@@ -615,4 +615,14 @@ url = https://www.americanimmigrationcouncil.org/research/dream-act-overview
 match = -84.6%%
 title = Jim 'N Nick's BBQ Restaurant
 url = https://www.jimnnicks.com/
+
+[www.westernunion.com]
+match = 0.0%%
+title = 
+url = https://www.westernunion.com/gb/en/iban-code.html
+
+[dudeperfect.com]
+match = -200.0%%
+title = Tour
+url = https://dudeperfect.com/tour
 
