CI images update

--- a/images/man-re-trang-10/config.ini
+++ b/images/man-re-trang-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-trang-10.html
 lastopen = 2024-06-07 00:52:54
 
 [search]
-lastsearch = 2024-07-30 13:19:27
+lastsearch = 2024-07-30 13:49:32
 
 [burningman.org]
 match = -60.0%%
@@ -825,4 +825,9 @@ url = https://goducks.com/
 match = -100.0%%
 title = UC Davis | California's College Town
 url = https://www.ucdavis.edu/
+
+[www.rgj.com]
+match = 0.0%%
+title = 
+url = https://www.rgj.com/story/life/arts/burning-man/2022/08/27/burning-man-history-purpose-origins-black-rock-city/7908585001/
 
