--- a/images/chan-hoi-mai-rua/config.ini
+++ b/images/chan-hoi-mai-rua/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-hoi-mai-rua.html
 lastopen = 2024-06-09 23:40:13
 
 [search]
-lastsearch = 2024-07-30 01:54:50
+lastsearch = 2024-07-30 13:51:18
 
 [shopee.vn]
 match = -137.5%%
@@ -12,9 +12,9 @@ title = Chăn cừu mai rùa siêu ấm kích thước 2mx2m3 nặng 2kg
 url = https://shopee.vn/Chăn-cừu-mai-rùa-siêu-ấm-kích-thước-2mx2m3-nặng-2kg-i.18553977.19585650220
 
 [www.instagram.com]
-match = -162.5%%
-title = Hoi Chan (@hoichandraws) • Instagram photos and videos
-url = https://www.instagram.com/hoichandraws/?hl=en
+match = -156.2%%
+title = Rua-chan (@rua_kouhai) • Instagram photos and videos
+url = https://www.instagram.com/rua_kouhai/?hl=en
 
 [vi.wikipedia.org]
 match = 28.6%%
@@ -27,9 +27,9 @@ title = Lư hương đá chân đặt mai rùa
 url = https://tuongdamynghe.com/trang-tri/lu-huong/lu-huong-da-chan-dat-mai-rua/
 
 [www.vinmec.com]
-match = -37.5%%
-title = Tác dụng của mai rùa với sức khỏe
-url = https://www.vinmec.com/vie/bai-viet/tac-dung-cua-mai-rua-voi-suc-khoe-vi/
+match = 0.0%%
+title = posts-vi-84.xml
+url = https://www.vinmec.com/sitemap/posts-vi-84.xml
 
 [www.youtube.com]
 match = -131.2%%
@@ -52,8 +52,8 @@ title = HSU YING-HUI TO
 url = https://www.cia.gov/readingroom/docs/CIA-RDP84-00581R000100220008-5.pdf
 
 [avibase.bsc-eoc.org]
-match = -131.2%%
-title = Phu Rua National Park bird checklist - Avibase
+match = -275.0%%
+title = Phu Rua National Park bird checklist - Avibase - Bird Checklists of ...
 url = https://avibase.bsc-eoc.org/checklist.jsp?region=TH04le03
 
 [partner.goodsmile.info]
@@ -245,4 +245,9 @@ url = https://www.nature.com/srep/about/editors
 match = -137.5%%
 title = Tìm hiểu sự biến đổi màu sắc trên lưng mai Rùa cảnh
 url = https://www.petmart.vn/tim-hieu-su-bien-doi-mau-sac-tren-lung-mai-rua-canh
+
+[dienmaycholon.com]
+match = -200.0%%
+title = Máy lọc nước giá rẻ, chất lượng, trả góp 0%%, giao hàng ...
+url = https://dienmaycholon.com/may-loc-nuoc
 
