--- a/images/chieu-dieu-hoa-khong-goi-re-16/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-re-16/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-re-16.html
 lastopen = 2024-06-09 23:43:24
 
 [search]
-lastsearch = 2024-07-30 10:25:11
+lastsearch = 2024-07-30 13:38:29
 
 [demxanh.com]
-match = -10.0%%
-title = Tư vấn mua chiếu điều hòa chính hãng, giá rẻ tại Đệm Xanh
-url = https://demxanh.com/tu-van-mua-chieu-dieu-hoa-chinh-hang-gia-re-tai-dem-xanh.html
+match = 16.7%%
+title = Chiếu điều hòa Nhật Bản Nekio Viscose màu xanh
+url = https://demxanh.com/chieu-dieu-hoa-nhat-ban-nekio-viscose-mau-xanh.html
 
 [suongtuyet.com]
-match = 16.7%%
-title = có nên sử dụng chiếu điều hòa không?
-url = https://suongtuyet.com/chieu-dieu-hoa-co-nen-su-dung-chieu-dieu-hoa-khong.html
+match = -13.3%%
+title = Có Mấy Loại Chiếu Điều Hòa? Chiếu Điều Hòa Loại Nào ...
+url = https://suongtuyet.com/nen-su-dung-chieu-dieu-hoa-loai-nao-chieu-dieu-hoa-loai-nao-tot.html
 
 [shopee.vn]
 match = 23.3%%
