--- a/images/chieu-lac-soc-16/config.ini
+++ b/images/chieu-lac-soc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-16.html
 lastopen = 2024-06-09 23:48:14
 
 [search]
-lastsearch = 2024-07-29 22:33:33
+lastsearch = 2024-07-30 13:46:26
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -72,9 +72,9 @@ title = Chiêu độc kích thích bưởi ra hoa, đậu quả I VTC16
 url = https://www.youtube.com/watch?v=MXwfPHbrM00
 
 [books.google.com]
-match = -218.8%%
-title = Chức vụ cung ứng Lời Tập 25 Số 1 Kì 2: Nghiên cứu kết tinh ...
-url = https://books.google.com/books?id=FeBCEAAAQBAJ&pg=PT182&lpg=PT182&dq=chieu+lac+soc+16&source=bl&ots=aHacAS2fye&sig=ACfU3U0A_4n528q8hGrh3ebSsOs7rH61iw&hl=en&sa=X&ved=2ahUKEwiOgJ_crsyHAxUzEVkFHVCVBioQ6AF6BAgZEAM
+match = -156.2%%
+title = Nizu #3: Bạn bè - Page 14 - Google Books Result
+url = https://books.google.com/books?id=saXpEAAAQBAJ&pg=PA14&lpg=PA14&dq=chieu+lac+soc+16&source=bl&ots=dtkNodfub6&sig=ACfU3U30ILzsnRnclNbAoNapqfp6ujj97A&hl=en&sa=X&ved=2ahUKEwien7Cxlc6HAxVNg4kEHeWuGW8Q6AF6BAgfEAM
 
 [dantocmiennui.vn]
 match = -125.0%%
