--- a/images/man-in-hoa-dep-16/config.ini
+++ b/images/man-in-hoa-dep-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-16.html
 lastopen = 2024-06-10 01:11:01
 
 [search]
-lastsearch = 2024-07-30 11:31:24
+lastsearch = 2024-07-30 13:44:22
 
 [www.tiktok.com]
 match = -82.4%%
@@ -600,4 +600,9 @@ url = https://www.rockawayinc.com/hoa/2024-new-florida-hoa-laws/
 match = -100.0%%
 title = TAYLOR MANAGEMENT COMPANY - Updated July 2024
 url = https://www.yelp.com/biz/taylor-management-company-whippany
+
+[www.tallahassee.com]
+match = 0.0%%
+title = 
+url = https://www.tallahassee.com/story/news/local/state/2024/07/01/florida-hoa-new-law-july/74265853007/
 
