--- a/images/tui-nem-korea-tuan-anh-16/config.ini
+++ b/images/tui-nem-korea-tuan-anh-16/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/tui-nem-korea-tuan-anh-16.html
 lastopen = 2024-06-17 10:42:58
 
 [search]
-lastsearch = 2024-07-30 10:26:57
+lastsearch = 2024-07-30 13:41:15
 
 [tuananh.vn]
-match = -72.7%%
-title = Đệm bông ép
-url = https://tuananh.vn/dem-bong-ep-c51.html
+match = 12.0%%
+title = Đệm bông Adaptive Fiber 3M
+url = https://tuananh.vn/dem-bong-adaptive-3m-p345.html
 
 [demxanh.com]
 match = -28.0%%
 title = Đệm bông ép Tuấn Anh Korea gấm Plus chính hãng
-url = https://demxanh.com/dem-bong-ep-tuan-anh-korea-gam-plus.html?srsltid=AfmBOorOPYZ6aEebWNUIPduVr5RxJ89FGHUxlaOKMA3kySh8sRiW-cLJ
+url = https://demxanh.com/dem-bong-ep-tuan-anh-korea-gam-plus.html?srsltid=AfmBOooaZJlYglCr86pxzGzyFaI23zRF7N2oKJoL_PYvo2oSEtN_PiZk
 
 [shopee.vn]
 match = -40.0%%
@@ -74,7 +74,7 @@ url = https://www.facebook.com/tuananh.vn/videos/đệm-tuấn-anh-hướng-dẫ
 [demviethome.vn]
 match = -40.0%%
 title = Đệm bông ép Tuấn Anh 2 Mảnh Korea giá rẻ hà nội. ...
-url = https://demviethome.vn/dem-bong-ep-tuan-anh-2-manh-korea/?srsltid=AfmBOooZeEQ0aY8Nm1E1A5diUQO8e1rPd98CtLBDmq4712SooOcyjBX0
+url = https://demviethome.vn/dem-bong-ep-tuan-anh-2-manh-korea/?srsltid=AfmBOoodtyY0vxm9IWDbNdkKD2YS3NbS0yWvjur0f7jM2bDMECpHr6U8
 
 [m.facebook.com]
 match = -76.0%%
