--- a/images/chieu-dieu-hoa-khong-goi-18/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-18.html
 lastopen = 2024-06-09 22:26:01
 
 [search]
-lastsearch = 2024-07-30 13:45:06
+lastsearch = 2024-07-30 15:00:18
 
 [demxanh.com]
 match = 0.0%%
@@ -47,9 +47,9 @@ title = Chiếu Điều Hoà Băng Lạnh (2 màu)
 url = https://demchinhhang.com/products/chieu-dieu-hoa-cao-su-01
 
 [foreverbedding.net]
-match = 0.0%%
-title = Nằm Chiếu Điều Hòa Có Mát Không? - Forever Bedding
-url = https://foreverbedding.net/nam-chieu-dieu-hoa-co-mat-khong
+match = -59.3%%
+title = Những Thông Tin Cần Biết Khi Mua Chiếu Điều Hoà Cao Su ...
+url = https://foreverbedding.net/chieu-dieu-hoa-cao-su-non-la-gi
 
 [mandep.vn]
 match = 37.0%%
