--- a/images/man-tu-bung-18/config.ini
+++ b/images/man-tu-bung-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/man-tu-bung-18.html
 lastopen = 2024-06-10 00:37:41
 
 [search]
-lastsearch = 2024-07-30 13:36:26
+lastsearch = 2024-07-30 14:45:36
 
 [shopee.vn]
-match = -171.4%%
-title = [BẢO HÀNH 18 THÁNG] Màn Chụp Tự Bung Đỉnh Rộng ...
-url = https://shopee.vn/-BẢO-HÀNH-18-THÁNG-Màn-Chụp-Tự-Bung-Đỉnh-Rộng-Cao-Cấp-Màn-Đỉnh-Vuông-Hàng-Đẹp-Dày-Dặn-2m2_1m8_1m6-i.176591078.7737140981
+match = -214.3%%
+title = mùng chụp tự bung cao cấp 18 x 18 m giá tốt Tháng 7, 2024
+url = https://shopee.vn/search?keyword=mùng chụp tự bung cao cấp 18 x 18 m
 
 [mungthienmetta.com]
 match = -185.7%%
@@ -107,9 +107,9 @@ title = Màn Mùng chụp tự bung Kiều Phi - Bảo Hành 18 tháng
 url = https://www.facebook.com/groups/manchuptubung/
 
 [www.churchofjesuschrist.org]
-match = -278.6%%
-title = 1 Nifai 18 - The Church of Jesus Christ of Latter-day Saints
-url = https://www.churchofjesuschrist.org/study/scriptures/bofm/1-ne/18?lang=tpi
+match = -35.7%%
+title = Doktrin na ol Kavanen 89
+url = https://www.churchofjesuschrist.org/study/scriptures/dc-testament/dc/89?lang=tpi
 
 [sieuthinguyenkim.com]
 match = -128.6%%
@@ -125,4 +125,9 @@ url = https://www.bing.com/images/create
 match = -128.6%%
 title = The Ultimate Guide To New Zealand Slang
 url = https://brenontheroad.com/travellers-guide-new-zealand-slang/
+
+[www.nothingbundtcakes.com]
+match = -135.7%%
+title = Nothing Bundt Cakes: Delicious Bundt Cakes
+url = https://www.nothingbundtcakes.com/
 
