--- a/images/tam-trang-tri-ks-uc/config.ini
+++ b/images/tam-trang-tri-ks-uc/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tam-trang-tri-ks-uc.html
 lastopen = 2024-06-10 00:08:10
 
 [search]
-lastsearch = 2024-07-30 10:23:06
+lastsearch = 2024-07-30 14:59:37
 
 [demxanh.com]
 match = -84.2%%
 title = Tấm trang trí khách sạn giá rẻ nhất tại hệ thống ...
-url = https://demxanh.com/tam-trang-tri-khach-san.html?srsltid=AfmBOoo1RoJVHO1w0bdwgNJe5KK7c2sxDvnClfLWfD7w5ZmnxEFoeFmh
+url = https://demxanh.com/tam-trang-tri-khach-san.html
 
 [thegioidemviet.vn]
 match = -73.7%%
