--- a/images/chieu-du-lich-18/config.ini
+++ b/images/chieu-du-lich-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-du-lich-18.html
 lastopen = 2024-06-09 21:46:31
 
 [search]
-lastsearch = 2024-07-30 12:46:30
+lastsearch = 2024-07-30 15:17:47
 
 [helloviettravel.com]
 match = -181.2%%
@@ -32,9 +32,9 @@ title = Du Lịch USA và Thế Giới
 url = https://www.facebook.com/groups/dulichusavathegioi/
 
 [vinpearl.com]
-match = -187.5%%
-title = Điểm du lịch Khánh Hòa – List 18 “TỌA ĐỘ” không thể bỏ ...
-url = https://vinpearl.com/vi/list-18-diem-du-lich-khanh-hoa-dep-xieu-long-khong-the-bo-qua
+match = -193.8%%
+title = TOP 40 địa điểm du lịch Việt Nam nổi tiếng và hấp dẫn nhất
+url = https://vinpearl.com/vi/40-dia-diem-du-lich-viet-nam-noi-tieng-nhat-dinh-nen-den-mot-lan
 
 [thegioixecau.vn]
 match = -150.0%%
@@ -42,9 +42,9 @@ title = XE THAM QUAN DU LỊCH 2, 4, 6, 8, 11, 14, 18,...23 CHỖ
 url = https://thegioixecau.vn/xe-tham-quan-du-lich-2-4-6-8-11-14-18-23-cho
 
 [www.youtube.com]
-match = -56.2%%
-title = Cảnh giác các chiêu lừa du lịch | VTV24
-url = https://www.youtube.com/watch?v=pr86lbZaxyw
+match = 12.5%%
+title = Bản tin Du lịch 18/7/2024
+url = https://www.youtube.com/watch?v=JPdEyoI0u4Y
 
 [badenmountain.sunworld.vn]
 match = -212.5%%
@@ -87,9 +87,9 @@ title = Du lịch Mỹ khởi động lại sau 18 tháng đóng cửa
 url = https://lienbangtravel.com/vi/tin-tuc/258-du-lich-my-khoi-dong-lai-sau-18-thang-dong-cua
 
 [www.klook.com]
-match = -168.8%%
-title = 42 Địa Điểm Du Lịch Gần Sài Gòn Cho Cuối Tuần Năng ...
-url = https://www.klook.com/vi/blog/diem-du-lich-gan-sai-gon/
+match = -137.5%%
+title = 30 Khu Du Lịch Việt Nam Nổi Tiếng Bạn Đừng Bỏ Lỡ
+url = https://www.klook.com/vi/blog/khu-du-lich-o-viet-nam/
 
 [dulichviet.com.vn]
 match = -181.2%%
