--- a/images/nem-lo-xo-everon-pocket-18/config.ini
+++ b/images/nem-lo-xo-everon-pocket-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-lo-xo-everon-pocket-18.html
 lastopen = 2024-06-27 21:31:03
 
 [search]
-lastsearch = 2024-07-30 10:37:11
+lastsearch = 2024-07-30 15:18:46
 
 [www.everonvn.vn]
 match = 69.2%%
@@ -12,8 +12,8 @@ title = Đệm lò xo Everon Pocket Premium
 url = https://www.everonvn.vn/chi-tiet/dem-lo-xo-pocket-premium.html
 
 [www.diepxuan.com]
-match = 53.8%%
-title = Nệm lò xo Everon Pocket 18 - Điệp Xuân
+match = 61.5%%
+title = Điệp Xuân Nệm lò xo Everon Pocket 18
 url = https://www.diepxuan.com/nem-lo-xo-everon-pocket-18.html
 
 [everon.online]
