--- a/images/nem-sieu-nhe-9f-15/config.ini
+++ b/images/nem-sieu-nhe-9f-15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-15.html
 lastopen = 2024-06-10 00:49:22
 
 [search]
-lastsearch = 2024-07-30 14:51:03
+lastsearch = 2024-07-30 15:16:26
 
 [www.lazada.vn]
 match = -94.4%%
 title = Nệm Siêu Nhẹ Giá Tốt T07/2024 | Mua tại Lazada.vn
-url = https://www.lazada.vn/tag/nem-sieu-nhe/
+url = https://www.lazada.vn/tag/nem-sieu-nhe/?srsltid=AfmBOooDrt8dNzkD4moYnkwnE2nI8b5XzThK6rDPkEyIMCipV4ptnKI6
 
 [m.facebook.com]
 match = -72.2%%
@@ -87,9 +87,9 @@ title = CÙNG VÀO BẾP LÀM NEM NƯỚNG NHA TRANG SIÊU HẤP ...
 url = https://www.youtube.com/watch?v=guu4UvG6cKY
 
 [www.tiktok.com]
-match = -111.1%%
-title = 📍nem nướng út vân: 105 đông tác. ⭐️: 20-50 cành ...
-url = https://www.tiktok.com/@longlongneee/video/7247048935045467397
+match = -133.3%%
+title = 📍nem chua rán: 230 ngõ chợ khâm thiên. ⭐️: 6-15 cành ...
+url = https://www.tiktok.com/@longlongneee/video/7298670033461431570
 
 [vi.wikipedia.org]
 match = -27.8%%
