--- a/images/ruot-nem-korea-9f-14-19/config.ini
+++ b/images/ruot-nem-korea-9f-14-19/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-14-19.html
 lastopen = 2024-06-10 00:27:45
 
 [search]
-lastsearch = 2024-07-30 12:47:11
+lastsearch = 2024-07-30 15:17:07
 
 [en.wikipedia.org]
-match = 8.7%%
-title = Korea under Japanese rule
-url = https://en.wikipedia.org/wiki/Korea_under_Japanese_rule
+match = 0.0%%
+title = 
+url = https://en.wikipedia.org/wiki/Park_Chung_Hee
 
 [www.britannica.com]
 match = 0.0%%
