--- a/images/chieu-cay-dai-loan-vien-da15/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da15.html
 lastopen = 2024-06-09 23:43:35
 
 [search]
-lastsearch = 2024-07-30 14:57:14
+lastsearch = 2024-07-30 16:29:10
 
 [www.diepxuan.com]
 match = 65.4%%
@@ -103,8 +103,8 @@ url = https://www.merckmillipore.com/Web-ES-Site/es_ES/-/EUR/ShowDocument-File?P
 
 [www.facebook.com]
 match = -35.7%%
-title = Ngọc Reviews - #ngocreviews #matnagiay #bnbg ...
-url = https://www.facebook.com/photo.php?fbid=403628807687374&id=106082990775292&set=a.106104017439856
+title = Nội thất nhựa đài loan thành phong | Ho Chi Minh City
+url = https://www.facebook.com/p/Nội-thất-nhựa-đài-loan-thành-phong-100063972462124/?locale=gn_PY
 
 [www.favri.org.vn]
 match = -10.7%%
