--- a/images/tui-warmdream-140x190x09/config.ini
+++ b/images/tui-warmdream-140x190x09/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-warmdream-140x190x09.html
 lastopen = 2024-06-17 10:43:14
 
 [search]
-lastsearch = 2024-07-30 06:36:28
+lastsearch = 2024-07-30 16:33:17
 
 [www.diepxuan.com]
 match = 10.5%%
 title = Túi nệm - Điệp Xuân
-url = https://www.diepxuan.com/nem-bong/tui-nem.html?srsltid=AfmBOopC5F0O-EsIzcrPbi8jbcrBbr3R8VGQi-TjRSc6-FMXJJIDrOMA
+url = https://www.diepxuan.com/nem-bong/tui-nem.html
 
 [www.youtube.com]
 match = -75.0%%
