--- a/images/bo-phu-mau-160x200/config.ini
+++ b/images/bo-phu-mau-160x200/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-phu-mau-160x200.html
 lastopen = 2024-06-17 03:11:36
 
 [search]
-lastsearch = 2024-07-30 14:58:55
+lastsearch = 2024-07-30 16:48:24
 
 [tiki.vn]
 match = -138.9%%
 title = Bộ Chăn Drap Gối Cao Cấp Phủ Màu Thêu Thắng Lợi - Tiki
-url = https://tiki.vn/bo-chan-drap-goi-cao-cap-phu-mau-theu-thang-loi-xanh-duong-160-x-200-cm-p7855483.html
+url = https://tiki.vn/bo-chan-drap-goi-cao-cap-phu-mau-theu-thang-loi-cam-160-x-200-cm-p7695465.html
 
 [nemxinh.net]
 match = 50.0%%
@@ -33,18 +33,18 @@ url = https://choixe.vn/collections/giuong-160x200
 
 [nemkimtrang.com]
 match = -150.0%%
-title = Bộ Ga (Drap) Nệm Tencel Edena Mẫu 705 - CHÍNH HÃNG ...
-url = https://nemkimtrang.com/bo-ga-drap-nem-tencel-edena-mau-705-chinh-hang-cao-cap
+title = Bộ Ga (Drap) Nệm Tencel Edena Mẫu 743 - CHÍNH HÃNG ...
+url = https://nemkimtrang.com/bo-ga-drap-nem-tencel-edena-mau-743-chinh-hang-cao-cap
 
 [demxanh.com]
-match = -77.8%%
-title = Bộ ga chun Cotton chống thấm màu xanh ngọc
-url = https://demxanh.com/bo-ga-chun-cotton-chong-tham-mau-xanh-ngoc.html
+match = -72.2%%
+title = Bộ ga chun Cotton chống thấm màu xanh đậm
+url = https://demxanh.com/bo-ga-chun-cotton-chong-tham-mau-xanh-dam.html?srsltid=AfmBOorFps6Rlu-zixAmSiDJjSmKgOvtQrcfsJUF57RUVDLUZ2KB_BdU
 
 [foreverbedding.net]
 match = -66.7%%
-title = Bộ ga phủ Passion A114 - Forever Bedding
-url = https://foreverbedding.net/bo-ga-phu-passion-a114
+title = Bộ ga phủ Passion A112 - Forever Bedding
+url = https://foreverbedding.net/bo-ga-phu-passion-a112?srsltid=AfmBOopnxiZZAEB9FxoqvUQY5sNADsn4tQITh1QaJxEyKx-ME7Qh2gqW
 
 [aeoneshop.com]
 match = -105.6%%
@@ -84,7 +84,7 @@ url = https://www.mym.com.vn/kichthuoc/160x200/page/3
 [jysk.vn]
 match = -116.7%%
 title = Mattress pad 160x200 PLUS T15 DREAMZONE - JYSK.vn
-url = https://jysk.vn/en-US/mattress-pad-160x200-plus-t15-dreamzone
+url = https://jysk.vn/en-US/mattress-pad-160x200-plus-t15-dreamzone?srsltid=AfmBOooBadX6qQ7XFBQdqmp-sN_t0mCczF_joMFbF4oXat5_qznoVbQh
 
 [edena.vn]
 match = -66.7%%
@@ -107,9 +107,9 @@ title = [DRAP LỤA NỆM] Chăn ga gối đệm NIN Tencel TC800 ...
 url = https://ninhouse.vn/collections/nin-tencel-800
 
 [elmichsleep.vn]
-match = -116.7%%
-title = Bộ chăn ga 100%% Cotton Sateen - Elmich Dr.Sleep
-url = https://elmichsleep.vn/bo-chan-ga-100-cotton-sateen
+match = -127.8%%
+title = Bộ chăn ga 100%% Cotton Ranforce - Elmich Dr.Sleep
+url = https://elmichsleep.vn/bo-chan-ga-100-cotton-ranforce
 
 [everonhanquoc.vn]
 match = -22.2%%
@@ -139,7 +139,7 @@ url = https://www.facebook.com/fitin.vn/
 [www.diepxuan.com]
 match = -38.9%%
 title = Bộ ga phủ WarmDream 160x200 HQ - Điệp Xuân
-url = https://www.diepxuan.com/bo-ga-phu-warmdream-160x200-hq.html
+url = https://www.diepxuan.com/bo-ga-phu-warmdream-160x200-hq.html?srsltid=AfmBOoomIkxyp3Y41QOUsWs3jWjQ41C3hJbHmrfjIFlDz8feKiJ9FtV3
 
 [dovihome.vn]
 match = 6.7%%
