--- a/images/chieu-cay-cao-bang-a-15/config.ini
+++ b/images/chieu-cay-cao-bang-a-15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-cay-cao-bang-a-15.html
 lastopen = 2024-06-09 22:30:31
 
 [search]
-lastsearch = 2024-07-30 15:52:09
+lastsearch = 2024-07-30 16:47:45
 
 [demxanh.com]
-match = -39.1%%
-title = Bảng giá chiếu trúc Cao Bằng Tây Bắc mới nhất 2021
-url = https://demxanh.com/bang-gia-chieu-truc-cao-bang-tay-bac-moi-nhat-2019.html
+match = -21.7%%
+title = Chiếu Trúc Cao Bằng Cao Sơn chính hãng - Hà Nội
+url = https://demxanh.com/chieu-truc-cao-bang.html
 
 [www.diepxuan.com]
 match = 26.1%%
