--- a/images/chieu-gap-dai-loan-14/config.ini
+++ b/images/chieu-gap-dai-loan-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-14.html
 lastopen = 2024-06-09 22:43:30
 
 [search]
-lastsearch = 2024-07-30 06:31:47
+lastsearch = 2024-07-30 16:56:51
 
 [www.diepxuan.com]
 match = 19.0%%
@@ -47,9 +47,9 @@ title = THỦ TỤC XIN CẤP ĐỔI HỘ CHIẾU ĐÀI LOAN
 url = https://www.roc-taiwan.org/vnsgn_vi/post/91.html
 
 [www.facebook.com]
-match = -9.5%%
-title = Xin chào, tôi ở Đài Loan | Kaohsiung
-url = https://www.facebook.com/toiodailoan/?locale=vi_VN
+match = 0.0%%
+title = Raohe Ẩm Thực Đài
+url = https://www.facebook.com/RaoheAmThucDai/
 
 [www.tripadvisor.com.vn]
 match = -42.9%%
@@ -77,9 +77,9 @@ title = Lịch bay Đài Loan 2024 - Tra cứu chuyến bay mới nhất ...
 url = https://www.bestprice.vn/ve-may-bay/lich-bay-dai-loan
 
 [visana.vn]
-match = -119.0%%
-title = Tất tần tật những điều cần biết về visa Quan Hồng Đài Loan
-url = https://visana.vn/visa-quan-hong-dai-loan/
+match = -114.3%%
+title = Trọn bộ hồ sơ, thủ tục xin visa Đài Loan mới nhất - VISANA
+url = https://visana.vn/visa-dai-loan/
 
 [www.tiktok.com]
 match = -19.0%%
