--- a/images/chieu-nhua-ha-noi-gia-thai-2m/config.ini
+++ b/images/chieu-nhua-ha-noi-gia-thai-2m/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-gia-thai-2m.html
 lastopen = 2024-06-09 23:51:45
 
 [search]
-lastsearch = 2024-07-30 15:51:48
+lastsearch = 2024-07-30 16:50:55
 
 [shopee.vn]
-match = -17.2%%
-title = Chiếu nhựa thái hàng loại1 1,6m×2m 1,8×2m 2m×3m 2m × ...
-url = https://shopee.vn/Chiếu-nhựa-thái-hàng-loại1-1-6m×2m-1-8×2m-2m×3m-2m-×4m-i.422461343.3989921731
+match = 0.0%%
+title = Chiếu nhựa - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
+url = https://shopee.vn/list/chiếu/nhựa
 
 [www.maihuyencorp.com]
 match = 13.8%%
@@ -32,9 +32,9 @@ title = Chiếu Cói Thái Bình Rẻ Nhất Hà Nội
 url = https://www.facebook.com/chieucoithaibinhrenhathanoi/
 
 [www.sendo.vn]
-match = -3.4%%
-title = Chiếu Nhựa 1M2 Hàng Xịn, Rẻ Nhất, Thanh Toán Khi Nhận
-url = https://www.sendo.vn/chieu-nhua-1m2.htm
+match = 0.0%%
+title = Chiếu Nhựa Thái Lan Hàng Xịn, Giá Xuất Xưởng, Với ...
+url = https://www.sendo.vn/chieu-nhua-thai-lan.htm
 
 [chieuvietbac.blogspot.com]
 match = -20.7%%
