--- a/images/nem-everon-200x200x9/config.ini
+++ b/images/nem-everon-200x200x9/config.ini
@@ -19,7 +19,7 @@ url = http://nemxinh.net/thuong-hieu/everon
 [everonvn.com.vn]
 match = 20.0%%
 title = Bảng Giá Đệm Everon Năm 2024
-url = https://everonvn.com.vn/everon/344/bang-gia-dem-everon
+url = https://everonvn.com.vn/everon/344/bang-gia-dem-everon?srsltid=AfmBOoqvich-ofVQMR66blHMGySsRCxchTP_jIH824q_9OfT4MFNEa6N
 
 [everonchinhhang.vn]
 match = -50.0%%
@@ -44,7 +44,7 @@ url = https://demxanh.com/bang-gia-nem-foam-oyasumi.html
 [thegioidemonline.com]
 match = -140.0%%
 title = Bảng giá đệm xơ dừa mới nhất 2022 tại Thế giới đệm Online
-url = https://thegioidemonline.com/bang-gia-dem-xo-dua.html
+url = https://thegioidemonline.com/bang-gia-dem-xo-dua.html?srsltid=AfmBOoq8V-W8CyZefj5xY_qKc6vw936v7qv54vNYVOJaXfniNa3n0PpV
 
 [thegioidemdep.com]
 match = -125.0%%
