--- a/images/tham-ghe-da-dai/config.ini
+++ b/images/tham-ghe-da-dai/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ghe-da-dai.html
 lastopen = 2024-06-07 00:36:57
 
 [search]
-lastsearch = 2024-07-30 12:33:30
+lastsearch = 2024-07-30 16:46:25
 
 [shopee.vn]
 match = -126.7%%
@@ -12,9 +12,9 @@ title = thảm trải ghế giá tốt Tháng 7, 2024 | Mua ngay
 url = https://shopee.vn/search?keyword=thảm trải ghế
 
 [ghedagiago.com]
-match = -133.3%%
-title = 55+ MẪU GIÁ BÀN GHẾ ĐÁ GIẢ GỖ RẺ ĐẸP NHẤT 2024
-url = https://ghedagiago.com/danh-muc/ban-ghe-da-gia-go/
+match = -146.7%%
+title = TOP 45 MẪU GHẾ ĐÁ CÔNG VIÊN GIÁ TỐT TẠI XƯỞNG ...
+url = https://ghedagiago.com/danh-muc/ghe-da-cong-vien/
 
 [ghedatruongan.com]
 match = -80.0%%
@@ -22,9 +22,9 @@ title = BẢNG GIÁ BÀN GHẾ ĐÁ TRƯỜNG AN MỚI NHẤT
 url = https://ghedatruongan.com/ban-ghe-da-gia-bao-nhieu/
 
 [ghedaviet.com]
-match = -93.3%%
-title = Ghế đá băng dài GDCV-59 - 0933832979
-url = https://ghedaviet.com/ghe-da-bang-dai-gdcv-59
+match = 6.7%%
+title = Ghế đá mài GDCV-98
+url = https://ghedaviet.com/ghe-da-mai-gdcv-98
 
 [anmoc.vn]
 match = -173.3%%
