--- a/images/tui-warmdream-18/config.ini
+++ b/images/tui-warmdream-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-warmdream-18.html
 lastopen = 2024-06-10 00:27:15
 
 [search]
-lastsearch = 2024-07-30 10:44:57
+lastsearch = 2024-07-30 16:50:14
 
 [www.walmart.com]
 match = -162.5%%
@@ -12,9 +12,9 @@ title = Zury Natural Dream Multi Yaky 18" 20" 22", SOM RT BURG
 url = https://www.walmart.com/ip/Zury-Natural-Dream-Multi-Yaky-18-20-22-SOM-RT-BURG/652131534
 
 [www.tiktok.com]
-match = -6.2%%
-title = Dvorak Genshin Bpc
-url = https://www.tiktok.com/discover/dvorak-genshin-bpc?lang=en
+match = -200.0%%
+title = Reveal time #beautytok #xyzba #hudabeauty #lip @Huda ...
+url = https://www.tiktok.com/@hudabeauty/video/7343308327729761582
 
 [www.diepxuan.com]
 match = -162.5%%
@@ -37,9 +37,9 @@ title = Điệp Xuân Chăn ga gối đệm Điệp Xuân
 url = https://diepxuan.com/
 
 [www.facebook.com]
-match = -68.8%%
-title = Siaran Chăn ga gối đệm Điệp Xuân
-url = https://www.facebook.com/diepxuanco/posts/4840270546027657/?locale=ms_MY
+match = -143.8%%
+title = Tiếp tục những cung đường... #thixagiarai ...
+url = https://www.facebook.com/thixaGiaRaiBL/videos/tiếp-tục-những-cung-đường-thixagiarai-giaraiquehuongtoi/433333748972674/
 
 [www.griffingouldwebsite.com]
 match = -43.8%%
@@ -54,7 +54,7 @@ url = https://www.youtube.com/watch?v=CUQBFAvIlUU
 [m.facebook.com]
 match = 0.0%%
 title = Thiên An Stationery
-url = https://m.facebook.com/profile.php?id=100065257461640&locale=ms_MY
+url = https://m.facebook.com/profile.php?id=100065257461640&locale=fr_FR
 
 [noveltoon.vn]
 match = -100.0%%
@@ -124,7 +124,7 @@ url = https://www.sephora.com/ca/en/product/huda-beauty-lip-contour-pencil-2-0-P
 [www.tui.co.uk]
 match = 0.0%%
 title = 
-url = https://www.tui.co.uk/holidays/tui-blue
+url = https://www.tui.co.uk/destinations/faq/before-you-go/booking-your-holiday
 
 [www.dailymail.co.uk]
 match = -218.8%%
