CI images update

--- a/images/ruot-nem-korea-9f-18/config.ini
+++ b/images/ruot-nem-korea-9f-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-18.html
 lastopen = 2024-06-10 00:54:35
 
 [search]
-lastsearch = 2024-07-30 16:37:42
+lastsearch = 2024-07-30 17:39:07
 
 [en.wikipedia.org]
 match = -10.0%%
@@ -37,9 +37,9 @@ title = Korea vs. Kína döntője lesz az MSI-nek!
 url = https://esport1.hu/news/2018/05/20/esport-aioween-leagueoflegends-riot-games-msi-mid-season-invitational-donto-kingzone-vs-rng
 
 [cryptoslate.com]
-match = 20.0%%
-title = Recently Added Coins
-url = https://cryptoslate.com/recently-added-coins/
+match = -65.0%%
+title = CryptoSlate: Crypto News, Insights & Data
+url = https://cryptoslate.com/
 
 [30rates.com]
 match = -120.0%%
@@ -414,7 +414,7 @@ url = https://8tharmy.korea.army.mil/ksc/
 [www.google.com]
 match = 0.0%%
 title = 
-url = https://www.google.com/search?sca_esv=71ec4c49190165ab&q=Was+Park+Chung+Hee+assassinated?&sa=X&ved=2ahUKEwj45qW55s2HAxUyJUQIHeudJE8QsZYEegQIURAC
+url = https://www.google.com/search?sca_esv=ac57164e41e9010e&q=Was+Park+Chung+Hee+assassinated?&sa=X&ved=2ahUKEwi59uSyyc6HAxVfE0QIHYQfBy0QsZYEegQITBAC
 
 [www.outlookindia.com]
 match = -170.0%%
