--- a/images/vo-chan-ks-uc-23-260/config.ini
+++ b/images/vo-chan-ks-uc-23-260/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-23-260.html
 lastopen = 2024-06-10 00:51:21
 
 [search]
-lastsearch = 2024-07-30 17:26:38
+lastsearch = 2024-07-30 17:46:49
 
 [fsapartners.ed.gov]
 match = -45.0%%
 title = 2023-2024 Federal School Code List
-url = https://fsapartners.ed.gov/sites/default/files/2023-04/2324FedSchoolCodeListQ3.pdf
+url = https://fsapartners.ed.gov/sites/default/files/2022-11/2324FedSchoolCodeList.pdf
 
 [finaid.org]
 match = 0.0%%
@@ -52,14 +52,14 @@ title = Name: Paul David Adams Address
 url = https://cci.lbl.gov/~paul/Adams-CV-12-2023.pdf
 
 [profiles.ucsf.edu]
-match = -25.0%%
-title = Alan Wu, PhD
-url = https://profiles.ucsf.edu/alan.wu
+match = 5.0%%
+title = Steve Braunstein, MD, PhD
+url = https://profiles.ucsf.edu/steve.braunstein
 
 [www.ncbi.nlm.nih.gov]
-match = -155.0%%
-title = Integration of cellular bioenergetics with mitochondrial ...
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3594552/
+match = -130.0%%
+title = Exercise in patients with inflammatory bowel diseases
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5743119/
 
 [profiles.ucla.edu]
 match = -41.7%%
