--- a/images/chieu-cay-cao-bang-a-15/config.ini
+++ b/images/chieu-cay-cao-bang-a-15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-cay-cao-bang-a-15.html
 lastopen = 2024-06-09 22:30:31
 
 [search]
-lastsearch = 2024-07-30 17:24:09
+lastsearch = 2024-07-30 17:44:45
 
 [demxanh.com]
-match = -21.7%%
-title = Chiếu Trúc Cao Bằng Cao Sơn chính hãng - Hà Nội
-url = https://demxanh.com/chieu-truc-cao-bang.html
+match = -60.9%%
+title = Cách phân biệt các loại chiếu trúc thanh Cao Bằng Cao Sơn
+url = https://demxanh.com/cach-phan-biet-cac-loai-chieu-truc-thanh-cao-bang-cao-son.html
 
 [www.diepxuan.com]
 match = 26.1%%
@@ -22,9 +22,9 @@ title = Chiếu trúc cao bằng 150*190
 url = https://uannga.vn/index.php/shops/chieu-mat/chieu-truc-cao-bang-150-190.html
 
 [shopee.vn]
-match = 17.4%%
-title = Chiếu cao bằng Việt Nam 1.2m x 1.95
-url = https://shopee.vn/Chiếu-cao-bằng-Việt-Nam-1.2m-x-1.95-i.79170238.1588526215
+match = -73.9%%
+title = Chiếu trúc Cao Bằng loại một, có 5 loại kích thước 1,2m ...
+url = https://shopee.vn/Chiếu-trúc-Cao-Bằng-loại-một-có-5-loại-kích-thước-1-2m-1m-0.9mvà-0.8m-i.17414239.2656259371
 
 [chuyenhangviet.com]
 match = -43.5%%
@@ -52,9 +52,9 @@ title = Chiếu Trúc Cao Sơn – Cao Bằng Loại 1 - Hà Nội
 url = https://thegioidemviet.vn/chieu-truc-cao-bang-loai-1/
 
 [www.facebook.com]
-match = 13.0%%
-title = Chiếu trúc Bản Ngà - Cao Bằng | Cao Bang
-url = https://www.facebook.com/chieucaobang/
+match = -65.2%%
+title = TÁC PHẨM THAM GIA CUỘC THI SÁNG TÁC VIDEO, CLIP ...
+url = https://www.facebook.com/baodientuPetrotimes/videos/911210507610256/
 
 [entershopping.vn]
 match = -21.7%%
@@ -110,4 +110,9 @@ url = https://storage-vnportal.vnpt.vn/cbg-ubnd/sitefolders/tpcaobang/5458/2022/
 match = -13.0%%
 title = Độc đáo các sản phẩm từ trúc Cao Bằng
 url = https://caobang.gov.vn/viet-nam-dat-nuoc-con-nguoi/doc-dao-cac-san-pham-tu-truc-cao-bang-778155
+
+[www.youtube.com]
+match = -60.9%%
+title = Độc lạ thú chơi "cây ăn thịt" của giới trẻ | VTC16
+url = https://www.youtube.com/watch?v=ibuNelPz4Lc
 
