--- a/images/chieu-cay-moc-hoa18/config.ini
+++ b/images/chieu-cay-moc-hoa18/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa18.html
 lastopen = 2024-06-09 22:43:05
 
 [search]
-lastsearch = 2024-07-30 11:41:45
+lastsearch = 2024-07-30 17:49:15
 
 [hoa18.com]
 match = -84.2%%
-title = Giỏ hoa tươi Mộc Mạc - Giá tốt nhất - Shop Hoa18
-url = https://hoa18.com/san-pham/gio-hoa-tuoi-moc-mac
+title = Bó hoa tươi Nắng Toả Chiều Nay" | Giá tốt nhất
+url = https://hoa18.com/san-pham/bo-hoa-tuoi-nang-toa-chieu-nay
 
 [www.youtube.com]
-match = -126.3%%
-title = Cây hoa mộc,cây hoa mộc hương ra hoa nhiều,những căn ...
-url = https://www.youtube.com/watch?v=KAnEyj4H3PY
+match = -105.3%%
+title = Cách giúp hoa Mộc Hương bền hoa để chơi Tết âm lịch
+url = https://www.youtube.com/watch?v=demL5DzJK5M
 
 [kallos.co]
 match = -105.3%%
@@ -37,9 +37,9 @@ title = Nâng cao năng lực phân tích hình ảnh soi chiếu hàng hóa ...
 url = https://thoibaotaichinhvietnam.vn/nang-cao-nang-luc-phan-tich-hinh-anh-soi-chieu-hang-hoa-xuat-nhap-khau-128029.html
 
 [vi.wikipedia.org]
-match = -47.4%%
-title = Mạc Thiên Tứ – Wikipedia tiếng Việt
-url = https://vi.wikipedia.org/wiki/Mạc_Thiên_Tứ
+match = -52.6%%
+title = Tân Cương – Wikipedia tiếng Việt
+url = https://vi.wikipedia.org/wiki/Tân_Cương
 
 [moc.gov.vn]
 match = -147.4%%
