--- a/images/chieu-dieu-hoa-khong-goi-cao-su-16/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-cao-su-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-cao-su-16.html
 lastopen = 2024-06-09 23:20:09
 
 [search]
-lastsearch = 2024-07-30 15:18:25
+lastsearch = 2024-07-30 17:47:08
 
 [shopee.vn]
-match = 8.8%%
-title = Chiếu điều hoà và 2 vỏ gối Latex cao su non loại 1 sẵn hàng
-url = https://shopee.vn/Chiếu-điều-hoà-và-2-vỏ-gối-Latex-cao-su-non-loại-1-sẵn-hàng-i.16397825.1036019362
+match = 0.0%%
+title = Set 5 món chiếu điều hòa cao su non kèm chăn thun lạnh ...
+url = https://shopee.vn/Set-5-món-chiếu-điều-hòa-cao-su-non-kèm-chăn-thun-lạnh-chiếu-cao-su-non-trần-tim-chun-cài-4-góc-kèm-chăn-trần-bông-i.217274735.15698688208
 
 [olbedding.com]
 match = 11.8%%
