--- a/images/chieu-dieu-hoa-khong-goi-re-18/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-re-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-re-18.html
 lastopen = 2024-06-09 22:26:11
 
 [search]
-lastsearch = 2024-07-30 17:15:53
+lastsearch = 2024-07-30 17:37:40
 
 [demxanh.com]
 match = -3.3%%
@@ -82,9 +82,9 @@ title = Chiếu Điều Hòa Tencel Thoáng Mát Giảm 20%% Tại ...
 url = https://thegioinem.com/chieu-dieu-hoa-3d-tencel.html
 
 [www.facebook.com]
-match = -14.3%%
-title = Chiếu Điều Hoà
-url = https://www.facebook.com/ChieuDieuHoaSieuThiMuaRe/
+match = 52.0%%
+title = Chiếu Điều Hòa Cao Su Non
+url = https://www.facebook.com/groups/753270865357544/
 
 [www.congnghieptieudung.vn]
 match = -23.3%%
