--- a/images/chieu-lac-soc-12/config.ini
+++ b/images/chieu-lac-soc-12/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-lac-soc-12.html
 lastopen = 2024-06-09 23:46:56
 
 [search]
-lastsearch = 2024-07-30 14:47:59
+lastsearch = 2024-07-30 17:49:59
 
 [shopee.vn]
 match = 25.0%%
-title = Chiếu Lác Trắng Xếp Gọn
-url = https://shopee.vn/Chiếu-Lác-Trắng-Xếp-Gọn-i.58697470.8505363108
+title = Chiếu lác màu xuất khấu
+url = https://shopee.vn/Chiếu-lác-màu-xuất-khấu-i.275355238.5749616844
 
 [chieulongdinh.com.vn]
 match = -162.5%%
@@ -52,9 +52,9 @@ title = Làng nghề dệt chiếu cói Phú Tân
 url = https://mia.vn/cam-nang-du-lich/lang-nghe-det-chieu-coi-phu-tan-lang-nghe-hon-tram-nam-tuoi-tai-phu-yen-2165
 
 [m.facebook.com]
-match = -175.0%%
-title = Sơ lược về làng nghề dệt chiếu tại Long Định - Cần Đước
-url = https://m.facebook.com/notes/cộng-đồng-long-an/sơ-lược-về-làng-nghề-dệt-chiếu-tại-long-định-cần-đước/402374479949088/
+match = 22.2%%
+title = Chieu Lac
+url = https://m.facebook.com/chieu.lac.73/
 
 [baolongan.vn]
 match = -125.0%%
@@ -97,9 +97,9 @@ title = Chiều dài xương mũi thai nhi 12 tuần bình thường là bao ...
 url = https://www.vinmec.com/vie/bai-viet/chieu-dai-xuong-mui-thai-nhi-12-tuan-binh-thuong-la-bao-nhieu-vi/
 
 [books.google.com]
-match = -231.2%%
-title = 12 Con Giáp Theo Lịch Vạn Niên - Page 182 - Google Books Result
-url = https://books.google.com/books?id=uEr8EAAAQBAJ&pg=PA182&lpg=PA182&dq=chieu+lac+soc+12&source=bl&ots=83sB8lPZTs&sig=ACfU3U31nuJiPHw-7Gt4w8VtcAVWfA2ckg&hl=en&sa=X&ved=2ahUKEwjxsKCJwMyHAxXg4MkDHdRkFTMQ6AF6BAgjEAM
+match = -150.0%%
+title = Ph_c Truy_n Lu_t L_ Ký (T_p 2: Ph_c Truy_n 12-26)
+url = https://books.google.com/books?id=qpuaDwAAQBAJ&pg=PA338&lpg=PA338&dq=chieu+lac+soc+12&source=bl&ots=oA-u5RU5Uu&sig=ACfU3U0UKp02m5M09qAKjWy9TAfPUtP9SQ&hl=en&sa=X&ved=2ahUKEwj__7vpy86HAxWckO4BHYPmC6sQ6AF6BAgkEAM
 
 [baovinhlong.vn]
 match = -137.5%%
