--- a/images/chieu-nhua-ha-noi-du-lich-16/config.ini
+++ b/images/chieu-nhua-ha-noi-du-lich-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-du-lich-16.html
 lastopen = 2024-06-09 23:14:36
 
 [search]
-lastsearch = 2024-07-30 15:57:17
+lastsearch = 2024-07-30 17:42:55
 
 [www.diepxuan.com]
 match = 35.7%%
 title = Chiếu nhựa Hà Nội du lịch 180x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-nhua-ha-noi-du-lich-180x200.html
+url = https://www.diepxuan.com/chieu-nhua-ha-noi-du-lich-180x200.html?srsltid=AfmBOoqamTR9ttQz2apwR9RSAyULwKpo_mKLWm70ZVjrGNAvrVrykK_C
 
 [shopee.vn]
 match = 32.1%%
