--- a/images/man-re-trang-12/config.ini
+++ b/images/man-re-trang-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-trang-12.html
 lastopen = 2024-06-07 00:52:43
 
 [search]
-lastsearch = 2024-07-30 16:58:36
+lastsearch = 2024-07-30 17:33:11
 
 [burningman.org]
 match = -60.0%%
@@ -197,9 +197,9 @@ title = Big City Volleyball
 url = https://bigcityvolleyball.com/
 
 [en.wikipedia.org]
-match = 10.0%%
-title = Thuy Trang
-url = https://en.wikipedia.org/wiki/Thuy_Trang
+match = 0.0%%
+title = 
+url = https://en.wikipedia.org/wiki/Burning_Man
 
 [www.jhu.edu]
 match = -66.7%%
