--- a/images/nem-sieu-nhe-9f-15/config.ini
+++ b/images/nem-sieu-nhe-9f-15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-15.html
 lastopen = 2024-06-10 00:49:22
 
 [search]
-lastsearch = 2024-07-30 15:16:26
+lastsearch = 2024-07-30 17:39:45
 
 [www.lazada.vn]
 match = -94.4%%
 title = Nệm Siêu Nhẹ Giá Tốt T07/2024 | Mua tại Lazada.vn
-url = https://www.lazada.vn/tag/nem-sieu-nhe/?srsltid=AfmBOooDrt8dNzkD4moYnkwnE2nI8b5XzThK6rDPkEyIMCipV4ptnKI6
+url = https://www.lazada.vn/tag/nem-sieu-nhe/
 
 [m.facebook.com]
 match = -72.2%%
