--- a/images/tui-singapore-150x190x09/config.ini
+++ b/images/tui-singapore-150x190x09/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-singapore-150x190x09.html
 lastopen = 2024-06-17 10:41:24
 
 [search]
-lastsearch = 2024-07-30 13:18:06
+lastsearch = 2024-07-30 17:43:15
 
 [www.diepxuan.com]
 match = 5.3%%
 title = Túi nệm - Điệp Xuân
-url = https://www.diepxuan.com/nem-bong/tui-nem.html?srsltid=AfmBOopMkE8IQ77VUVSXULkorJdNvRpvWjPIZ3bmxahQ0AF9b72vVqMY
+url = https://www.diepxuan.com/nem-bong/tui-nem.html
 
 [www.tui.co.uk]
 match = -58.3%%
