CI images update

--- a/images/tui-korea-14/config.ini
+++ b/images/tui-korea-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-korea-14.html
 lastopen = 2024-06-17 10:35:06
 
 [search]
-lastsearch = 2024-07-30 12:31:10
+lastsearch = 2024-07-30 17:58:30
 
 [www.tui.co.uk]
-match = -250.0%%
-title = TUI.co.uk | Holidays, Flights & Cruises 2024 / 2025
-url = https://www.tui.co.uk/
+match = 0.0%%
+title = Buy South Korean won
+url = https://www.tui.co.uk/travel-money/buy-south-korean-won/
 
 [uk.trip.com]
 match = 0.0%%
@@ -400,4 +400,9 @@ url = https://www.teddyblake.com/?srsltid=AfmBOorV8abpiReXytp8drW7_Y5yUm_hRQGgyU
 match = -233.3%%
 title = Gap year working overseas (Japan & South Korea)
 url = https://www.mumsnet.com/talk/higher_education/5129402-gap-year-working-overseas-japan-south-korea
+
+[roblox-ptfs.fandom.com]
+match = -258.3%%
+title = Tui | Pilot Training Flight Simulator Wiki - Fandom
+url = https://roblox-ptfs.fandom.com/wiki/Tui
 
