CI images update

--- a/images/tam-trang-tri-ks-uc/config.ini
+++ b/images/tam-trang-tri-ks-uc/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tam-trang-tri-ks-uc.html
 lastopen = 2024-06-10 00:08:10
 
 [search]
-lastsearch = 2024-07-30 15:34:19
+lastsearch = 2024-07-30 18:23:37
 
 [demxanh.com]
 match = -84.2%%
@@ -350,4 +350,9 @@ url = https://www.goodall.com.au/beech18-production/beech18-part-3.pdf
 match = 0.0%%
 title = cdY cHUNG NHAN HtEu cnuAru
 url = https://canthinhphat.com/data/news/2614/tps-ind226-30kg.pdf
+
+[www.goworldtravel.vn]
+match = -73.7%%
+title = Hội Chợ Quốc Tế Ngành Trang Trí Xây Dựng Cbd 25th
+url = https://www.goworldtravel.vn/hoi-cho-quoc-te-nganh-trang-tri-xay-dung-cbd-25th-quang-chau
 
