--- a/images/tham-giuong-ii-120x190/config.ini
+++ b/images/tham-giuong-ii-120x190/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-ii-120x190.html
 lastopen = 2024-06-17 21:10:17
 
 [search]
-lastsearch = 2024-07-30 16:38:20
+lastsearch = 2024-07-30 18:27:48
 
 [demxanh.com]
-match = -22.7%%
-title = Thảm trải giường lông cừu TLC 06 - Hà Nội
-url = https://demxanh.com/tham-trai-giuong-long-cuu-tlc-06.html?srsltid=AfmBOopYt_1dwbHzzij5J73jH_qXwwUmZwLwr3i1kA0XbCJMws8SH6aJ
+match = 0.0%%
+title = Thảm trải giường cao su non màu ghi
+url = https://demxanh.com/tham-trai-giuong-cao-su-non-mau-ghi.html
 
 [demre.com.vn]
 match = 18.2%%
@@ -29,7 +29,7 @@ url = https://noithatkenli.vn/kich-thuoc-giuong-ngu-cac-loai/
 [ru9.vn]
 match = -86.4%%
 title = Cách Tính Diện Tích, Kích Thước Các Loại ... - Ru9
-url = https://ru9.vn/blogs/magazine/cach-tinh-dien-tich-kich-thuoc-cac-loai-giuong-ngu?srsltid=AfmBOopWvWnmsFrEvNHPlHAvdyKXp54eU5tAezI6Xh9ZfzGgYofpn0Dv
+url = https://ru9.vn/blogs/magazine/cach-tinh-dien-tich-kich-thuoc-cac-loai-giuong-ngu
 
 [cafeland.vn]
 match = -109.1%%
@@ -59,7 +59,7 @@ url = https://www.animemusicvideos.org/members/members_myprofile.php?user_id=122
 [jysk.vn]
 match = -72.7%%
 title = Kích thước giường ngủ tiêu chuẩn và thông dụng ...
-url = https://jysk.vn/kich-thuoc-giuong-ngu?srsltid=AfmBOoq4eJ2j88PZOJBv_O3w7pP1iVcWl7c4aTF99sMr4xJ8h_JsA8BB
+url = https://jysk.vn/kich-thuoc-giuong-ngu
 
 [anawood.vn]
 match = 15.8%%
@@ -79,7 +79,7 @@ url = https://suongtuyet.com/nem-lo-xo-kim-cuong-divan-asling
 [vikicare.com]
 match = 13.6%%
 title = thảm đá nhiệt nóng - Vikicare
-url = https://vikicare.com/product-tag/tham-da-nhiet-nong/?srsltid=AfmBOoqw_17FSRBvD36gJYyQoBa8ZJ5iAh1_9IFLOXqDnqsQwNKYsZXo
+url = https://vikicare.com/product-tag/tham-da-nhiet-nong/
 
 [www.linkedin.com]
 match = -86.4%%
