--- a/images/tui-warmdream-14/config.ini
+++ b/images/tui-warmdream-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-warmdream-14.html
 lastopen = 2024-06-10 00:24:23
 
 [search]
-lastsearch = 2024-07-30 16:48:05
+lastsearch = 2024-07-30 18:12:06
 
 [www.diepxuan.com]
-match = 18.8%%
-title = Túi nệm - Điệp Xuân
-url = https://www.diepxuan.com/nem-bong/tui-nem.html
+match = -125.0%%
+title = Túi Warmdream 140x190x09 - Chăn ga gối đệm Điệp Xuân
+url = https://www.diepxuan.com/tui-warmdream-140x190x09.html?srsltid=AfmBOor3wQ2OLWRb18J8dS8Vek4Jr50cyqCSfKcpCo5Vnum5Wa9ZqJzn
 
 [demxanh.com]
 match = -181.2%%
@@ -37,9 +37,9 @@ title = Báo cáo thị trường Nhân vật hoạt hình dành cho doanh ...
 url = https://metric.vn/nhan-vat-hoat-hinh
 
 [www.tiktok.com]
-match = -31.2%%
-title = Huda Beauty Best Lip Liner
-url = https://www.tiktok.com/discover/huda-beauty-best-lip-liner
+match = -243.8%%
+title = Lip liner: @Huda Beauty in muted pink Lipstick: @Charlotte ...
+url = https://www.tiktok.com/@faydeutsch/video/7278866493734178094
 
 [archiveofourown.org]
 match = -137.5%%
