--- a/images/chieu-cay-moc-hoa18/config.ini
+++ b/images/chieu-cay-moc-hoa18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa18.html
 lastopen = 2024-06-09 22:43:05
 
 [search]
-lastsearch = 2024-07-30 17:49:15
+lastsearch = 2024-07-30 18:15:11
 
 [hoa18.com]
 match = -84.2%%
@@ -275,4 +275,9 @@ url = https://quochoi.vn/tintuc/Pages/tin-doan-dai-bieu-quoc-hoi.aspx?ItemID=874
 match = -147.4%%
 title = Hà Giang: Nỗ lực đưa điện lưới quốc gia về các thôn, bản ...
 url = https://www.evn.com.vn/d6/news/Ha-Giang-No-luc-dua-dien-luoi-quoc-gia-ve-cac-thon-ban-vung-sau-vung-xa-6-13-125248.aspx
+
+[www.mof.gov.vn]
+match = -152.6%%
+title = Toàn xã hội tham gia “Phát triển hệ tri thức Việt số ...
+url = https://www.mof.gov.vn/webcenter/portal/btcvn/pages_r/l/tin-bo-tai-chinh?dDocName=UCMTMP122779
 
