--- a/images/nem-di-a-mon-9f-16-re/config.ini
+++ b/images/nem-di-a-mon-9f-16-re/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-di-a-mon-9f-16-re.html
 lastopen = 2024-06-10 00:47:22
 
 [search]
-lastsearch = 2024-07-30 17:24:30
+lastsearch = 2024-07-30 18:15:32
 
 [en.wikipedia.org]
 match = 0.0%%
@@ -52,9 +52,9 @@ title = Balancing Supply and Demand …. in the fast approaching ' ...
 url = https://wattclarity.com.au/articles/2020/05/nem20-balancingsupplydemand-rawofftarget/
 
 [books.google.com]
-match = -123.8%%
-title = A Critical Pronouncing Dictionary, and Expositor of the ...
-url = https://books.google.com/books?id=mjRAAAAAYAAJ&pg=RA3-PA80&lpg=RA3-PA80&dq=nem+di+a+mon+9f+16+re&source=bl&ots=BLKCr6Bnuh&sig=ACfU3U2gBD6PnTykc8xQinBIl_XGTyPXwA&hl=en&sa=X&ved=2ahUKEwjI2NKQxs6HAxVqFDQIHV0wFf8Q6AF6BAgaEAM
+match = -157.1%%
+title = Jewish Folk Songs from the Baltics - Page 74 - Google Books Result
+url = https://books.google.com/books?id=Khw6BAAAQBAJ&pg=PA74&lpg=PA74&dq=nem+di+a+mon+9f+16+re&source=bl&ots=m2e_Fa5jqY&sig=ACfU3U31S2gZ4CEUKQlFfKLuv_Se6WlDlQ&hl=en&sa=X&ved=2ahUKEwiCk8jE0c6HAxV8LkQIHcqpM3gQ6AF6BAgfEAM
 
 [www.diepxuan.com]
 match = -81.0%%
@@ -252,9 +252,9 @@ title = Idarubicine Treatment of Acute Myeloblastic Leukemia During ...
 url = https://www.jcog.com.tr/pdf/?pdf=d8ef007c2333e3bc22fd94ac0c236dcb
 
 [www.formatbiz.it]
-match = -100.0%%
-title = Nem Dubrovnik unveils its 10 Keynote Speakers for 10 ...
-url = https://www.formatbiz.it/dettNews.aspx?id=9944
+match = -95.2%%
+title = NEM Dubrovnik 2023, Day 2: record number of decision ...
+url = https://www.formatbiz.it/dettNews.aspx?id=10170
 
 [yro.slashdot.org]
 match = -114.3%%
