--- a/images/tham-nhung-bali-160x230/config.ini
+++ b/images/tham-nhung-bali-160x230/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-nhung-bali-160x230.html
 lastopen = 2024-06-07 00:35:43
 
 [search]
-lastsearch = 2024-07-30 17:48:54
+lastsearch = 2024-07-30 18:28:10
 
 [demxanh.com]
 match = 0.0%%
@@ -19,12 +19,12 @@ url = https://www.lazada.vn/products/tham-li-bali-tham-trai-san-nhap-khau-100-ca
 [tiki.vn]
 match = -47.8%%
 title = Mua Thảm trải sàn bali cao cấp kích thước 160*230cm
-url = https://tiki.vn/tham-trai-san-bali-cao-cap-kich-thuoc-160-230cm-p44108490.html?spid=160905191/
+url = https://tiki.vn/tham-trai-san-bali-cao-cap-kich-thuoc-160-230cm-p33139180.html
 
 [thegioidemviet.vn]
 match = -65.2%%
-title = Thảm trải sàn Bali M2 hàng cao cấp, mẫu mã đa dạng
-url = https://thegioidemviet.vn/tham-trai-san-bali-m2/
+title = Thảm trải sàn Bali M6 hàng cao cấp, mẫu mã đa dạng
+url = https://thegioidemviet.vn/tham-trai-san-bali-m6/
 
 [www.diepxuan.com]
 match = 100.0%%
