CI images update

--- a/images/chieu-lac-gam-18/config.ini
+++ b/images/chieu-lac-gam-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-18.html
 lastopen = 2024-06-09 23:47:34
 
 [search]
-lastsearch = 2024-07-30 05:38:37
+lastsearch = 2024-07-30 18:29:32
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -47,9 +47,9 @@ title = nhà cái uy tín ♐️【WW88.game】Casino Online
 url = https://hoanghaco.com.vn/muv/F08bet.xhtml
 
 [www.youtube.com]
-match = -218.8%%
-title = Chiêu trò cùm nhíp chống sốc và thanh giằng cân bằng chống ...
-url = https://www.youtube.com/watch?v=wZdbzOkTME0
+match = -200.0%%
+title = Vietnamese Baguette Recipe - BÁNH MÌ VIỆT NAM - KNEAD ...
+url = https://www.youtube.com/watch?v=yzQ6rCK8pJw
 
 [saigontourist.edu.vn]
 match = -162.5%%
@@ -187,9 +187,9 @@ title = 974 người theo dõi trên Pinterest - Petal Designs
 url = https://petaldesigns.co.za/ảnh-cặc-to-anime.html
 
 [m.facebook.com]
-match = -206.2%%
-title = Miss... - Miss Grand Vietnam - Hoa Hậu Hòa Bình Việt Nam
-url = https://m.facebook.com/100064207387690/photos/914547064028865/
+match = -125.0%%
+title = Hà Nội Riviu - Riviu.vn | Công đức vô bụng
+url = https://m.facebook.com/groups/Thanhriviu.Hanoi/posts/1468061083857623/
 
 [baomoi.com]
 match = -193.8%%
@@ -382,9 +382,9 @@ title = Chương 18: Lạc Hoa Lưu Thủy - Cổng ...
 url = https://docln.net/truyen/16494-noi-phien-muon-cua-cong-chua-ma-ca-rong-hikikomori/c135951-chuong-18-lac-hoa-luu-thuy
 
 [atgt.baogiaothong.vn]
-match = -200.0%%
-title = Quảng Ninh đảm bảo ATGT đường thủy nội địa trong mùa ...
-url = https://atgt.baogiaothong.vn/quang-ninh-dam-bao-atgt-duong-thuy-noi-dia-trong-mua-mua-bao-192240725174230055.htm
+match = -212.5%%
+title = CSGT TP.HCM công bố 28 địa chỉ, số điện thoại tiếp nhận ...
+url = https://atgt.baogiaothong.vn/csgt-tphcm-cong-bo-28-dia-chi-so-dien-thoai-tiep-nhan-phan-anh-vi-pham-giao-thong-19224073015412801.htm
 
 [www.cantho.gov.vn]
 match = -6.2%%
@@ -640,4 +640,19 @@ url = https://dansinh.dantri.com.vn/dien-dan-dan-sinh/tieng-noi-cua-nguoi-trong-
 match = -200.0%%
 title = Olympic 2024: Australia vươn lên dẫn đầu bảng tổng sắp ...
 url = https://bptv.vn/news/18/160653/olympic-2024-australia-vuon-len-dan-dau-bang-tong-sap-huy-chuong
+
+[yenbaitv.org.vn]
+match = -18.8%%
+title = Nơi cử tri gửi gắm niềm tin
+url = https://yenbaitv.org.vn/noi-cu-tri-gui-gam-niem-tin-100927.media
+
+[dantri.com.vn]
+match = -162.5%%
+title = NSND Xuân Bắc, Việt Hoa diễn kịch tưởng nhớ Lưu ...
+url = https://dantri.com.vn/giai-tri/nsnd-xuan-bac-viet-hoa-dien-kich-tuong-nho-luu-quang-vu-20240730115201368.htm
+
+[thanhnien.vn]
+match = -200.0%%
+title = Những váy áo đơn giản nhưng xa hoa ai cũng mặc được ở ...
+url = https://thanhnien.vn/thoi-trang-tre/nhung-vay-ao-don-gian-nhung-xa-hoa-ai-cung-mac-duoc-o-san-dien-2025-185240730032725136.htm
 
