--- a/images/ga-ni-long-16/config.ini
+++ b/images/ga-ni-long-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-16.html
 lastopen = 2024-06-09 23:07:25
 
 [search]
-lastsearch = 2024-07-30 17:01:45
+lastsearch = 2024-07-30 18:29:11
 
 [www.georgianicols.com]
 match = -169.2%%
@@ -37,9 +37,9 @@ title = Northwest Georgia Scanner
 url = https://www.facebook.com/NWGAScanner/
 
 [www.youtube.com]
-match = -146.2%%
-title = The Gummy Bear Song - Long English Version
-url = https://www.youtube.com/watch?v=astISOttCQ0
+match = -223.1%%
+title = RRK 12 Angles of Strikes | Kali Arnis Eskrima FMA
+url = https://www.youtube.com/watch?v=Ir_kRhS3llY
 
 [www.regmovies.com]
 match = -215.4%%
@@ -237,9 +237,9 @@ title = Henny Penny EC05-001 TERM RING #10 16-14 GA NI PL
 url = https://www.partstown.com/henny-penny/henec05-001
 
 [pubs.acs.org]
-match = -330.8%%
-title = Ni(4-tBustb)3: A Robust 16-Electron Ni(0) Olefin Complex for ...
-url = https://pubs.acs.org/doi/10.1021/acs.organomet.0c00485
+match = -338.5%%
+title = Structure and Role of a Ga-Promoter in Ni-Based Catalysts for ...
+url = https://pubs.acs.org/doi/10.1021/jacsau.3c00677
 
 [www.postercompliance.com]
 match = -207.7%%
@@ -253,8 +253,8 @@ url = https://www.denverpost.com/author/georgia-nicols/
 
 [www.prowireusa.com]
 match = -200.0%%
-title = Deutsch 0462-005-20141 Size 20 Contact 18-16 Ga
-url = https://www.prowireusa.com/p-701-deutsch-0462-005-20141-contact-18-16-ga.html
+title = Deutsch 0462-201-20141 Size20 Contact 22-18 Ga
+url = https://www.prowireusa.com/p-81-deutsch-0462-201-20141-contact-22-18-ga.html
 
 [www.icc-cpi.int]
 match = -92.3%%
