--- a/images/bo-ga-goi-phu-mau-xoa-tin-18/config.ini
+++ b/images/bo-ga-goi-phu-mau-xoa-tin-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-phu-mau-xoa-tin-18.html
 lastopen = 2024-06-09 23:46:35
 
 [search]
-lastsearch = 2024-07-30 10:01:38
+lastsearch = 2024-07-30 18:27:31
 
 [www.diepxuan.com]
 match = 3.6%%
@@ -14,7 +14,7 @@ url = https://www.diepxuan.com/chan-ga-goi-mau.html
 [shop.chanrathanhthuy.com]
 match = 10.7%%
 title = Bộ Ga Bọc Cotton Thêu Chân Màu Nâu Đất (12)
-url = https://shop.chanrathanhthuy.com/products/bo-ga-boc-theu-chan-mau-nau-dat?srsltid=AfmBOopO8AhXHqBXXgqBNlzZbulHXyBRmBtUoRsJFXcyp24Dcir--VAo
+url = https://shop.chanrathanhthuy.com/products/bo-ga-boc-theu-chan-mau-nau-dat
 
 [shopee.vn]
 match = -7.1%%
