--- a/images/chieu-cay-cao-bang-a-18/config.ini
+++ b/images/chieu-cay-cao-bang-a-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-cao-bang-a-18.html
 lastopen = 2024-06-09 23:45:38
 
 [search]
-lastsearch = 2024-07-30 17:14:31
+lastsearch = 2024-07-30 18:40:02
 
 [chieutruc.info]
 match = -73.9%%
@@ -14,12 +14,12 @@ url = https://chieutruc.info/chieu-truc-cao-bang-cao-son/
 [www.diepxuan.com]
 match = 26.1%%
 title = Chiếu cây Cao Bằng A 180x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-cay-cao-bang-a-180x200.html
+url = https://www.diepxuan.com/chieu-cay-cao-bang-a-180x200.html?srsltid=AfmBOoqTfEENls-W1puBTWeO_U3KeAeOsgEQSY6VjtqHb3dQ9UxFG-pL
 
 [demxanh.com]
 match = -39.1%%
 title = Bảng giá chiếu trúc Cao Bằng Tây Bắc mới nhất 2021
-url = https://demxanh.com/bang-gia-chieu-truc-cao-bang-tay-bac-moi-nhat-2019.html
+url = https://demxanh.com/bang-gia-chieu-truc-cao-bang-tay-bac-moi-nhat-2019.html?srsltid=AfmBOoos7B0Qg-r4YR6A-jo0SRx8DeaQMFqxtmpTuFXYNu7ca_t8U-MT
 
 [shopee.vn]
 match = -78.3%%
