--- a/images/chieu-lac-d2-15/config.ini
+++ b/images/chieu-lac-d2-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-15.html
 lastopen = 2024-06-21 06:43:45
 
 [search]
-lastsearch = 2024-07-30 16:15:52
+lastsearch = 2024-07-30 18:28:33
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -12,9 +12,9 @@ title = Chiếu lác D2 15
 url = https://www.diepxuan.com/chieu-lac-d2-15.html
 
 [www.facebook.com]
-match = -80.0%%
-title = Rạp Chiếu Phim Cũ | Ho Chi Minh City
-url = https://www.facebook.com/phimhaygiare/
+match = -240.0%%
+title = Cơ sở thứ 6 Celadon Sports & Resort số 2, đường D2 , Sơn ...
+url = https://www.facebook.com/TheDucBangTamPhatTrienChieuCaoVaTheLucChoTreEm/videos/cơ-sở-thứ-6-celadon-sports-resort-số-2-đường-d2-sơn-kỳ-tân-phú-bố-mẹ-có-thể-đưa-/1798013050339107/
 
 [banhang.shopee.vn]
 match = -66.7%%
@@ -52,9 +52,9 @@ title = {search_title}
 url = {search_url}
 
 [www.foody.vn]
-match = -73.3%%
-title = Bò Né 2 Chị Em - Đường D2 ở TP. HCM
-url = https://www.foody.vn/ho-chi-minh/bo-ne-2-chi-em-duong-d-2
+match = -106.7%%
+title = Pong Quán - Nguyễn Gia Trí ở TP. HCM
+url = https://www.foody.vn/ho-chi-minh/pong-quan-nguyen-gia-tri
 
 [visana.vn]
 match = -233.3%%
