--- a/images/tham-giuong-ii-180x200/config.ini
+++ b/images/tham-giuong-ii-180x200/config.ini
@@ -4,21 +4,21 @@ url = https://www.diepxuan.com/tham-giuong-ii-180x200.html
 lastopen = 2024-06-17 21:09:53
 
 [search]
-lastsearch = 2024-07-30 17:30:51
+lastsearch = 2024-07-30 18:27:10
 
 [www.diepxuan.com]
-match = 45.5%%
-title = Thảm giường II 180x200 - Điệp Xuân
-url = https://www.diepxuan.com/tham-giuong-ii-180x200.html
+match = 50.0%%
+title = Điệp Xuân Thảm giường nỉ 180x200
+url = https://www.diepxuan.com/tham-giuong-ni-180x200.html
 
 [demxanh.com]
-match = -45.5%%
-title = Thanh lý thảm trải giường lông cừu giá cực rẻ
-url = https://demxanh.com/tham-trai-giuong-long-cuu-tlc-07.html
+match = -22.7%%
+title = Thảm trải giường cao su non màu xanh nhạt
+url = https://demxanh.com/tham-trai-giuong-cao-su-non-mau-xanh-nhat.html
 
 [www.lazada.vn]
-match = -113.6%%
-title = Ga chống thấm trải giường cotton 2 lớp loại tốt kích thước ...
+match = -68.2%%
+title = Ga chống thấm trải giường cotton 2 lớp loại tốt ...
 url = https://www.lazada.vn/products/ga-chong-tham-trai-giuong-cotton-2-lop-loai-tot-kich-thuoc-1m6-va-1m8-x-2m-sieu-mem-sieu-dep-boc-nem-i942722664.html
 
 [noithatlongthai.com]
@@ -27,9 +27,9 @@ title = Giường MDF 1.8x2m có 2 ngăn kéo
 url = https://noithatlongthai.com/giuong-mdf-1-8x2m-co-2-ngan-keo/
 
 [shopee.vn]
-match = -86.4%%
-title = Thảm chơi 180x200 180x150 dày dặn (1.5cm) gấp gọn ...
-url = https://shopee.vn/Thảm-chơi-180x200-180x150-dày-dặn-(1.5cm)-gấp-gọn-cuộn-silicon-Tobe-chống-trơn-2-mặt-an-toàn-cho-bé-1117-1118-i.67395719.22278613460
+match = -50.0%%
+title = thảm trải giường giá tốt Tháng 7, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=thảm trải giường
 
 [noithatthuynguyet.com]
 match = -13.6%%
