--- a/images/tham-ni-xop-hinh-60/config.ini
+++ b/images/tham-ni-xop-hinh-60/config.ini
@@ -4,27 +4,27 @@ url = https://www.diepxuan.com/tham-ni-xop-hinh-60.html
 lastopen = 2024-06-07 00:35:14
 
 [search]
-lastsearch = 2024-07-30 17:33:30
+lastsearch = 2024-07-30 18:25:02
 
 [xoptraisan.info]
-match = -147.4%%
-title = Thảm xốp trải sàn 60x60 họa tiết tranh giao thông cao cấp ...
-url = https://xoptraisan.info/tham-xop-tranh-giao-thong-60x60
+match = 26.3%%
+title = Thảm nỉ ghép Tường Lâm 60×60
+url = https://xoptraisan.info/tham-ni-ghep-tuong-lam-60x60
 
 [thamaulac.com.vn]
-match = -31.6%%
-title = Thảm nỉ ghép 60x60cm trơn màu đỏ, ghi
-url = https://thamaulac.com.vn/san-pham/tham-ni-ghep-60x60cm-tron-do-ghi
+match = -78.9%%
+title = THẢM XỐP ÂU LẠC – Hàng Việt Nam chất lượng cao
+url = https://thamaulac.com.vn/
 
 [thamvinhthuan.com]
-match = 26.3%%
-title = Thảm xốp hoạt hình 60 x 60 cm
-url = https://thamvinhthuan.com/san-pham/tham-xop-hoat-hinh-60-x-60-cm/
+match = 5.3%%
+title = Thảm xốp một màu 60cm x 60 cm
+url = https://thamvinhthuan.com/san-pham/tham-xop-mot-mau-van-caro-60-x-60-cm/
 
 [thamht.vn]
-match = 36.8%%
-title = Thảm xốp – THAMHT.VN
-url = https://thamht.vn/collections/tham-xop
+match = 52.6%%
+title = Thảm xốp hoạt hình 60x60
+url = https://thamht.vn/products/tham-xop-hoat-hinh-cho-tre-em
 
 [shopee.vn]
 match = -94.7%%
@@ -42,9 +42,9 @@ title = Thảm Xốp Mặt Nỉ - Kho Vật Liệu Trải Sàn TPHCM
 url = https://vatlieulotsan.com/danh-muc-san-pham/tham-xop/tham-xop-mat-ni/
 
 [tiki.vn]
-match = -147.4%%
-title = Mua 10 tấm xốp ghép, mặt thảm nỉ kích thước 1 tấm 60cm x ...
-url = https://tiki.vn/10-tam-xop-ghep-mat-tham-ni-kich-thuoc-1-tam-60cm-x-60cm-x-0-6cm-tam-mau-do-nhu-hinh-p74677637.html?spid=75099611&__s=ssdp
+match = -94.7%%
+title = Thảm xốp lót sàn 60x60 hàng chính hãng, giao nhanh
+url = https://tiki.vn/search?q=thảm xốp lót sàn 60x60
 
 [thamsami.com]
 match = -84.2%%
