--- a/images/tui-korea-16/config.ini
+++ b/images/tui-korea-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-korea-16.html
 lastopen = 2024-06-17 10:42:33
 
 [search]
-lastsearch = 2024-07-30 16:18:18
+lastsearch = 2024-07-30 18:26:27
 
 [www.cfd-online.com]
 match = -266.7%%
@@ -17,9 +17,9 @@ title =
 url = https://en.wikipedia.org/wiki/TUI_Group
 
 [www.tuigroup.com]
-match = -300.0%%
-title = TUI Group – The one of the world's leading tourism groups
-url = https://www.tuigroup.com/en-en
+match = -250.0%%
+title = TUI brand name may no longer be used by TUI Russia
+url = https://www.tuigroup.com/en-en/media/press-releases/2022/2022-03-10-tui-terminates-agreement
 
 [www.tui.nl]
 match = -316.7%%
@@ -107,9 +107,9 @@ title = TUI Hotels & Resorts shares green recommendations to ...
 url = https://www.ttgasia.com/2023/06/16/tui-hotels-resorts-shares-green-recommendations-to-drive-sustainable-hospitality/
 
 [www.tui.co.uk]
-match = -41.7%%
-title = Find & Book Flights
-url = https://www.tui.co.uk/flight/
+match = -208.3%%
+title = Flights from Manchester Airport (MAN) - TUI
+url = https://www.tui.co.uk/flight/airports/manchester
 
 [maritime-executive.com]
 match = -316.7%%
@@ -287,8 +287,8 @@ title = TUI
 url = https://hk.linkedin.com/company/tuigroup?trk=public_profile_experience-item_profile-section-card_image-click
 
 [tui-magic-life-adults-only-16.aegeanhotelspage.com]
-match = -308.3%%
-title = Resort Tui Magic Life Bodrum - Adults Only (16+) Bodrum ...
+match = -291.7%%
+title = Tui Magic Life Bodrum - Adults Only (16+) - Aegean Region
 url = https://tui-magic-life-adults-only-16.aegeanhotelspage.com/en/
 
 [www.airliners.net]
@@ -332,8 +332,8 @@ title = TUI Group Achieves Record Turnover of 3.6 Billion Euros ...
 url = https://www.travelandtourworld.com/news/article/tui-group-achieves-record-turnover-of-3-6-billion-euros-in-strong-q2-2024-amid-travel-enthusiasm/
 
 [shopee.vn]
-match = -191.7%%
-title = [SẴN] Túi Stand Oil Chubby Korea - Chính Hãng
+match = -225.0%%
+title = [SẴN] Túi Stand Oil Chubby Korea - Chính Hãng ...
 url = https://shopee.vn/-SẴN-Túi-Stand-Oil-Chubby-Korea-Chính-Hãng-i.5755146.25459514464
 
 [tc.linkedin.com]
