--- a/images/tui-nem-korea-tuan-anh-14/config.ini
+++ b/images/tui-nem-korea-tuan-anh-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-nem-korea-tuan-anh-14.html
 lastopen = 2024-06-17 10:43:32
 
 [search]
-lastsearch = 2024-07-30 17:41:53
+lastsearch = 2024-07-30 18:31:16
 
 [suongtuyet.com]
-match = -36.0%%
-title = Nệm Bông Ép Tuấn Anh Korea Vải Valize - Đà Nẵng
-url = https://suongtuyet.com/nem-bong-ep-tuan-anh-seong-san-vai-gam
+match = -4.0%%
+title = Nệm Gòn Ép Tuấn Anh Korea Plus Vải Gấm
+url = https://suongtuyet.com/nem-gon-ep-tuan-anh-korea-plus-vai-gam
 
 [tuananh.vn]
 match = 8.0%%
