CI images update

--- a/images/chieu-gap-dai-loan-lua-12/config.ini
+++ b/images/chieu-gap-dai-loan-lua-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-12.html
 lastopen = 2024-06-09 22:43:24
 
 [search]
-lastsearch = 2024-07-30 10:53:11
+lastsearch = 2024-07-30 19:23:52
 
 [tiki.vn]
 match = 16.0%%
@@ -17,9 +17,9 @@ title = Phim MAI của Trấn Thành sẽ được khởi chiếu tại Đài Lo
 url = https://www.tiktok.com/@danghoaly86/video/7348795087473609989
 
 [shopee.vn]
-match = -8.0%%
-title = BẢN LỀ GẬP THÔNG MINH ĐÀI LOAN CHỊU LỰC 80KG
-url = https://shopee.vn/BẢN-LỀ-GẬP-THÔNG-MINH-ĐÀI-LOAN-CHỊU-LỰC-80KG-LOẠI-CAO-CẤP-INOX-BẢN-DÀY-CHẮC-CHẮN-GIÁ-ĐỠ-GẤP-BÀN-TREO-TƯỜNG-XẾP-GỌN-i.120824980.3158643972
+match = -28.0%%
+title = Chiếu cói tự nhiên kiểu gập đôi cao cấp Đài Loan.
+url = https://shopee.vn/Chiếu-cói-tự-nhiên-kiểu-gập-đôi-cao-cấp-Đài-Loan.-i.17414239.5745968545
 
 [congly.vn]
 match = 0.0%%
@@ -27,9 +27,9 @@ title = sitemap-article-2022-10-12.xml
 url = https://congly.vn/sitemap-article-2022-10-12.xml
 
 [www.facebook.com]
-match = -60.0%%
-title = Du lịch tự do Đài Loan | Ngày 12 tháng 4 phim Mai của ...
-url = https://www.facebook.com/groups/867394263291528/posts/ngày-12-tháng-4-phim-mai-của-trấn-thành-sẽ-được-công-chiếu-toàn-đài-loan-với-tiê/7807974442566774/
+match = -124.0%%
+title = 20231212 Bản tin tiếng Việt PTS Đài Loan 公視越南語新聞 ...
+url = https://www.facebook.com/ptsvietnamesenews/videos/20231212-bản-tin-tiếng-việt-pts-đài-loan-公視越南語新聞/1378308362826085/
 
 [vi.wikipedia.org]
 match = 6.7%%
@@ -47,9 +47,9 @@ title = Quốc triều chính biên toát yếu
 url = https://books.google.com/books?id=Mm3W8DYq3t4C&pg=PA195&lpg=PA195&dq=chieu+gap+dai+loan+lua+12&source=bl&ots=Z0gE5_O_0W&sig=ACfU3U3bulwCtGucffSv9htf5fhj5uHcUA&hl=en&sa=X&ved=2ahUKEwjT_5nxtM2HAxXtGEQIHSfyIpMQ6AF6BAgXEAM
 
 [www.skyscanner.com.vn]
-match = -60.0%%
-title = Vé máy bay giá rẻ từ Đài Bắc đến Hoa Kỳ - Skyscanner
-url = https://www.skyscanner.com.vn/routes/tpet/us/đai-bac-to-hoa-ky.html
+match = -52.0%%
+title = Vé máy bay giá rẻ từ Chicago đến Đài Loan - Skyscanner
+url = https://www.skyscanner.com.vn/routes/chia/tw/chicago-to-đai-loan.html
 
 [www.bestprice.vn]
 match = -80.0%%
@@ -67,9 +67,9 @@ title = Phim Đài Loan
 url = https://tvmotchill.com/quoc-gia/phim-dai-loan/
 
 [www.youtube.com]
-match = -108.0%%
-title = 20240412 Bản tin tiếng Việt PTS Đài Loan 公視越南語新聞
-url = https://www.youtube.com/watch?v=9v-wyYZ3zkA
+match = -68.0%%
+title = TRƯA 28/12: Nhật Bản sắp đưa tên lửa tới gần đảo Đài Loan
+url = https://www.youtube.com/watch?v=WHX0Pgqi_g4
 
 [znews.vn]
 match = -40.0%%
@@ -117,9 +117,9 @@ title = Kinh nghiệm du lịch Đài Loan tháng 12 đầy đủ, chi tiết
 url = https://www.vietnambooking.com/du-lich/blog-du-lich/du-lich-dai-loan-thang-12.html
 
 [trithucvn.co]
-match = -84.0%%
-title = Đài Loan: Cựu bác sỹ TQ phơi bày nạn thu hoạch nội tạng ...
-url = https://trithucvn.co/the-gioi/dai-loan-cuu-bac-sy-tq-phoi-bay-nan-thu-hoach-noi-tang-song-cua-dcstq.html
+match = -80.0%%
+title = Tổng thống Đài Loan: Trung Quốc đe dọa bất kỳ nước nào ...
+url = https://trithucvn.co/the-gioi/tong-thong-dai-loan-trung-quoc-de-doa-bat-ky-nuoc-nao-la-de-doa-toan-the-gioi.html
 
 [canbangdongclc.com]
 match = -8.0%%
