--- a/images/chieu-lac-90x100/config.ini
+++ b/images/chieu-lac-90x100/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chieu-lac-90x100.html
 lastopen = 2024-06-20 22:28:06
 
 [search]
-lastsearch = 2024-07-30 17:23:07
+lastsearch = 2024-07-30 19:26:14
 
 [anlacphat.com]
 match = -118.8%%
-title = Đèn Led Chiếu Điểm Thanh Ray DIA807 5W Duhal
-url = https://anlacphat.com/den-led-chieu-diem-thanh-ray-dia807-5w-duhal/
+title = Đèn Led Chiếu Điểm Thanh Ray DIA808 7W Duhal
+url = https://anlacphat.com/den-led-chieu-diem-thanh-ray-dia808-7w-duhal/
 
 [thacoanlac.vn]
-match = -180.0%%
-title = FD990
-url = https://thacoanlac.vn/forland-fd900
+match = -133.3%%
+title = FD700B
+url = https://thacoanlac.vn/forland-fd700b
 
 [vietnamese.alibaba.com]
 match = -256.2%%
@@ -57,9 +57,9 @@ title = Y tế 100%% gạc hình gối bằng vải cotton 90X100
 url = https://vi.made-in-china.com/co_ti-care/product_Medical-100-Cotton-Pillow-Shaped-Gauze-Swab-90X100_ysrhnrrigg.html
 
 [www.diepxuan.com]
-match = -68.8%%
-title = Chiếu gấp Thái Bình 180x300 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-gap-thai-binh-180x300.html
+match = 37.5%%
+title = Điệp Xuân Chiếu lác 90x100
+url = https://www.diepxuan.com/chieu-lac-90x100.html
 
 [www.thietbihiepphat.com]
 match = -43.8%%
@@ -115,4 +115,19 @@ url = https://binhdinh.gov.vn/upload/2005340/20221213/PL_diem_giao_nhan_2676b.pd
 match = -231.2%%
 title = Combo nồi xông hơi điện Seka và lều xông hơi Seka tự bung ...
 url = https://shope.io.vn/combo-noi-xong-hoi-dien-seka-va-leu-xong-hoi-seka-tu-bung-khu-trung-toan-than-dung-cho-gia-dinh-0
+
+[m.facebook.com]
+match = -44.4%%
+title = Thảo Thảo
+url = https://m.facebook.com/marketplace/profile/100041540299534/
+
+[stechvietnam.com]
+match = -193.8%%
+title = Máy khuấy đũa Daihan điều khiển từ xa daihan HS-100T- ...
+url = http://stechvietnam.com/may-khuay-dua-daihan-dieu-khien-tu-xa-daihan-hs-100t-set-1-1-2112150.html
+
+[laichau.gov.vn]
+match = -200.0%%
+title = Báo cáo đề xuất cấp giấy phép môi trường của cơ sở “ ...
+url = https://laichau.gov.vn/upload/2000066/fck/ngant123/document - 2024-05-21T091151_849.pdf
 
