--- a/images/chieu-lac-soc-08/config.ini
+++ b/images/chieu-lac-soc-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-08.html
 lastopen = 2024-06-06 16:42:06
 
 [search]
-lastsearch = 2024-07-30 18:56:23
+lastsearch = 2024-07-30 19:27:39
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -18,8 +18,8 @@ url = https://www.pnj.com.vn/blog/huong-dan-do-size-lac-va-vong-tay/
 
 [www.facebook.com]
 match = -187.5%%
-title = 21-08-2023 Thời sự chiều 18h30 | By Truyền Hình Sóc Trăng
-url = https://www.facebook.com/soctrangtv/videos/21-08-2023-thời-sự-chiều-18h30/1110320116612660/
+title = 08-11-2022 Thời sự chiều 18h30 | By Truyền Hình Sóc Trăng
+url = https://www.facebook.com/soctrangtv/videos/08-11-2022-thời-sự-chiều-18h30/1168759537402748/
 
 [thuvienphapluat.vn]
 match = -206.2%%
@@ -282,9 +282,9 @@ title = Địa chấn lớn nhất EURO 2024: Georgia đánh bại Bồ Đào ..
 url = https://baolongan.vn/dia-chan-lon-nhat-euro-2024-georgia-danh-bai-bo-dao-nha-khien-ronaldo-hoan-toan-tat-tieng-a178337.html
 
 [vietstock.vn]
-match = -212.5%%
-title = Phân tích kỹ thuật phiên chiều 29/07: Tâm lý lạc quan dần ...
-url = https://vietstock.vn/2024/07/phan-tich-ky-thuat-phien-chieu-2907-tam-ly-lac-quan-dan-quay-tro-lai-585-1212641.htm
+match = -162.5%%
+title = Nhịp đập Thị trường 30/07: Phiên chiều sóng gió ...
+url = https://vietstock.vn/2024/07/nhip-dap-thi-truong-3007-phien-chieu-song-gio-vn-index-can-moc-gan-tham-chieu-1636-1213253.htm
 
 [baohungyen.vn]
 match = -200.0%%
@@ -532,9 +532,9 @@ title = kubet live ♉【WW88.tw】Casino Online Châu Á
 url = https://sinhvien.ufm.edu.vn/wap8c.shtml
 
 [vneconomy.vn]
-match = -187.5%%
-title = Chuyên gia lạc quan đưa ra hai kịch bản lạm phát năm 2024
-url = https://vneconomy.vn/chuyen-gia-lac-quan-dua-ra-hai-kich-ban-lam-phat-nam-2024.htm
+match = -243.8%%
+title = Sức ép ngắn hạn tăng đột ngột, VN-Index “phòng ngự” tốt tại ...
+url = https://vneconomy.vn/suc-ep-ngan-han-tang-dot-ngot-vn-index-phong-ngu-tot-tai-moc-1240-diem.htm
 
 [xaydungchinhsach.chinhphu.vn]
 match = -243.8%%
@@ -602,9 +602,9 @@ title = 8 trường hợp tiếp xúc gần ca bệnh bạch hầu ở Bắc Gia
 url = https://daibieunhandan.vn/suc-khoe/8-truong-hop-tiep-xuc-gan-ca-benh-bach-hau-o-bac-giang-co-ket-qua-am-tinh-i379518/
 
 [m.facebook.com]
-match = -143.8%%
-title = Tràng An Travel - Nắng chiều Lạc Dương, Trung Quốc 🏞️
-url = https://m.facebook.com/story.php/?story_fbid=366749612732298&id=100081917851165
+match = -206.2%%
+title = Real Madrid muốn có Alphonso Davies miễn phí | Đã xúc ...
+url = https://m.facebook.com/blvanhquan/videos/real-madrid-muốn-có-alphonso-davies-miễn-phí/505984321890955/
 
 [mia.vn]
 match = -225.0%%
