--- a/images/tam-trang-tri-ks-uc/config.ini
+++ b/images/tam-trang-tri-ks-uc/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tam-trang-tri-ks-uc.html
 lastopen = 2024-06-10 00:08:10
 
 [search]
-lastsearch = 2024-07-30 18:47:26
+lastsearch = 2024-07-30 19:28:40
 
 [demxanh.com]
 match = -84.2%%
 title = Tấm trang trí khách sạn giá rẻ nhất tại hệ thống ...
-url = https://demxanh.com/tam-trang-tri-khach-san.html
+url = https://demxanh.com/tam-trang-tri-khach-san.html?srsltid=AfmBOoqOaURmg1RsuxMeP9SoXB2JTzoxDpwaNqCGffI22e5ekJ-Ff4F6
 
 [thegioidemviet.vn]
 match = -73.7%%
@@ -17,8 +17,8 @@ title = Tấm Trang Trí Khách Sạn cao cấp giá tốt nhất Hà Nội
 url = https://thegioidemviet.vn/tam-trang-tri-khach-san/
 
 [vinhtuong.com]
-match = -110.5%%
-title = Tấm thạch cao, Tấm xi măng trang trí Vĩnh Tường DECO Plus
+match = -42.1%%
+title = Tấm trang trí Vĩnh Tường DECO Plus® In Lụa
 url = https://vinhtuong.com/tam-trang-tri-vinh-tuong-deco-plus
 
 [www.vietuchotel.vn]
