--- a/images/tham-bali-160x230/config.ini
+++ b/images/tham-bali-160x230/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-bali-160x230.html
 lastopen = 2024-06-07 00:36:14
 
 [search]
-lastsearch = 2024-07-30 16:19:22
+lastsearch = 2024-07-30 19:32:32
 
 [demxanh.com]
 match = -41.2%%
@@ -12,19 +12,19 @@ title = Thảm trải sàn Bali siêu khuyến mại
 url = https://demxanh.com/tham-trai-san-bali.html
 
 [tiki.vn]
-match = -117.6%%
-title = Thảm trải sàn bali cao cấp kích thước 160*230cm mã 33
-url = https://tiki.vn/tham-trai-san-bali-cao-cap-kich-thuoc-160-230cm-ma-33-p38118982.html
+match = -129.4%%
+title = Mua Thảm trải sàn bali cao cấp kích thước 160*230cm mới
+url = https://tiki.vn/tham-trai-san-bali-cao-cap-kich-thuoc-160-230cm-moi-p41436661.html?spid=41436690
 
 [www.lazada.vn]
-match = -94.1%%
-title = Thảm Bali Trải Sàn Phòng Ngủ Giá Tốt T04/2024
-url = https://www.lazada.vn/tag/tham-bali-trai-san-phong-ngu/?page=5
+match = -152.9%%
+title = Thảm Trải Sàn 100%% Nhập Khẩu Cao Cấp, Sang Trọng ...
+url = https://www.lazada.vn/products/mua-tham-nhan-qua-tham-li-bali-tham-trai-san-100-nhap-khau-cao-cap-sang-trong-120x160cm-160x230cm-200x300cm-i1557438611-s6573104309.html
 
 [thegioidemviet.vn]
-match = -152.9%%
-title = Thảm trải sàn Bali M3 mẫu đẹp, giá rẻ nhất thị trường
-url = https://thegioidemviet.vn/tham-trai-san-bali-m3/
+match = -135.3%%
+title = Thảm trải sàn Bali M2 hàng cao cấp, mẫu mã đa dạng
+url = https://thegioidemviet.vn/tham-trai-san-bali-m2/
 
 [sammas.vn]
 match = -111.8%%
@@ -32,9 +32,9 @@ title = Thảm lì ép Hàn Quốc (M2 hoa vàng) - STHA0011
 url = https://sammas.vn/tham-li-ep-han-quoc-stha0011
 
 [shopee.vn]
-match = -182.4%%
-title = Thảm phòng khách - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
-url = https://shopee.vn/list/thảm/phòng khách
+match = -235.3%%
+title = Thảm lì bali in họa tiết 5D cao cấp trang trí phòng khách phòng ngủ
+url = https://shopee.vn/Thảm-trải-sàn-Thảm-lì-bali-in-họa-tiết-5D-cao-cấp-trang-trí-phòng-khách-phòng-ngủ-i.92889546.17769472611
 
 [vn.my-best.com]
 match = -176.5%%
