--- a/images/bo-ga-goi-chun-xoa-14/config.ini
+++ b/images/bo-ga-goi-chun-xoa-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-14.html
 lastopen = 2024-06-09 23:12:23
 
 [search]
-lastsearch = 2024-07-30 14:51:22
+lastsearch = 2024-07-30 20:25:16
 
 [hanvico.com.vn]
 match = 28.6%%
-title = Bộ ga chun LIVING - LV45
-url = https://hanvico.com.vn/san-pham/bo-ga-chun-living-lv45/
+title = Bộ ga chun LIVING - LV51
+url = https://hanvico.com.vn/san-pham/bo-ga-chun-living-lv51/
 
 [www.diepxuan.com]
 match = -4.8%%
@@ -33,8 +33,8 @@ url = https://koala.vn/bo-chan-ga-goi-ttn-14.html
 
 [changagoidemsonghong.com]
 match = -28.6%%
-title = Bộ chăn ga gối 100%% cotton mã mầu BC22-061
-url = https://changagoidemsonghong.com/chan-ga-goi-bc61
+title = Bộ chăn ga gối cotton 100%% mã màu BC22-063
+url = https://changagoidemsonghong.com/chan-ga-goi-bc63
 
 [songhong.info]
 match = -19.0%%
