--- a/images/bo-ga-goi-chun-xoa-2m-22/config.ini
+++ b/images/bo-ga-goi-chun-xoa-2m-22/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-2m-22.html
 lastopen = 2024-06-09 22:43:18
 
 [search]
-lastsearch = 2024-07-30 13:40:35
+lastsearch = 2024-07-30 20:24:17
 
 [www.diepxuan.com]
 match = -62.5%%
@@ -17,9 +17,9 @@ title = Bộ chăn ga gối Sông Hồng Basic 100%% cotton BC22 057
 url = https://changagoidemsonghong.com/chan-ga-goi-bc57
 
 [songhong.info]
-match = -8.3%%
-title = Mẫu chăn ga gối cao cấp Urban mã UC22-021
-url = https://songhong.info/chan-ga-goi-uc021
+match = -33.3%%
+title = Nơi cung cấp chăn ga gối Sông Hồng Basic mã BC22
+url = https://songhong.info/chan-ga-goi-bc22
 
 [hanvico.com.vn]
 match = 41.7%%
@@ -27,9 +27,9 @@ title = Bộ ga chun LIVING - LV22
 url = https://hanvico.com.vn/san-pham/bo-ga-chun-living-lv22/
 
 [www.everonvn.vn]
-match = -33.3%%
-title = Bảng giá chi tiết bộ chăn ga gối mùa hè ESM-22002
-url = https://www.everonvn.vn/chi-tiet/everon-esm22002.html
+match = -87.5%%
+title = Everon EPC-22046 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
+url = https://www.everonvn.vn/chi-tiet/everon-epc22046.html
 
 [songhongchinhhang.vn]
 match = 0.0%%
