--- a/images/man-tu-bung-dinh-vuong-14/config.ini
+++ b/images/man-tu-bung-dinh-vuong-14/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/man-tu-bung-dinh-vuong-14.html
 lastopen = 2024-06-07 00:50:47
 
 [search]
-lastsearch = 2024-07-30 01:54:07
+lastsearch = 2024-07-30 20:22:09
 
 [shopee.vn]
-match = -12.0%%
-title = Màn chụp tự bung đỉnh vuông Kiều Phi - Mẫu mùng ...
-url = https://shopee.vn/Màn-chụp-tự-bung-đỉnh-vuông-Kiều-Phi-Mẫu-mùng-chụp-tự-bung-người-lớn-chống-muỗi-gấp-gọn-tiện-dụng-i.286850546.3461062779
+match = -36.0%%
+title = Mùng chụp tự bung đỉnh vuông cao cấp khóa to mắt dày ...
+url = https://shopee.vn/Mùng-chụp-tự-bung-đỉnh-vuông-cao-cấp-khóa-to-mắt-dày-dặn-màn-chụp-xếp-gọn-nhiều-size-i.116277580.6522803157
 
 [munghoangphat.com]
-match = -24.0%%
-title = MÙNG NGỦ, MÙNG CHỤP TỰ BUNG CAO CẤP HOÀNG PHÁT
-url = https://munghoangphat.com/
+match = 48.0%%
+title = màn chụp đỉnh vuông tự bung
+url = https://munghoangphat.com/man-chup-dinh-vuong-tu-bung/
 
 [www.mungbaobao.com]
 match = -28.0%%
@@ -27,9 +27,9 @@ title = Màn đỉnh vuông hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=màn đỉnh vuông
 
 [www.mantubung.com]
-match = -12.0%%
-title = Mùng Chụp Tự Bung Đỉnh Rộng Màn Đỉnh Vuông BẢO BẢO
-url = https://www.mantubung.com/mung-chup-tu-bung-dinh-rong.html
+match = -52.0%%
+title = Mùng Chụp | Màn Tự Bung Thông Minh Chống Muỗi | Khuyến ...
+url = https://www.mantubung.com/
 
 [manthutrang.com]
 match = -40.0%%
