--- a/images/tui-tuan-anh-180x200/config.ini
+++ b/images/tui-tuan-anh-180x200/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-tuan-anh-180x200.html
 lastopen = 2024-06-17 10:42:51
 
 [search]
-lastsearch = 2024-07-30 16:46:00
+lastsearch = 2024-07-30 20:21:26
 
 [www.diepxuan.com]
 match = 26.3%%
 title = Túi nệm - Điệp Xuân
-url = https://www.diepxuan.com/nem-bong/tui-nem.html?srsltid=AfmBOop-bTuhe3OLn04WmGEedoCFWa8J7di9nbqLeX1CkOW_XjP2itSb
+url = https://www.diepxuan.com/nem-bong/tui-nem.html
 
 [demkhangduy.com]
 match = -25.0%%
@@ -19,17 +19,17 @@ url = https://demkhangduy.com/dem-lo-xo-tui-adaptive-tuan-anh
 [demxanh.com]
 match = -100.0%%
 title = Đệm lò xo túi Tuấn Anh Adaptive Pocket (Cuộn) dày 25cm
-url = https://demxanh.com/dem-lo-xo-tui-tuan-anh-adaptive-pocket-cuon.html?srsltid=AfmBOoqn3_LNi7YpEm1Fhy8AQhuN_eSVyG6qx-KxiDqiGsw_y_-gFL8L
+url = https://demxanh.com/dem-lo-xo-tui-tuan-anh-adaptive-pocket-cuon.html
 
 [tuananh.vn]
 match = 10.0%%
-title = LÒ XO TÚI RUBY POTENCY
-url = https://tuananh.vn/site/Product/446?name=lo-xo-tui-ruby-potency
+title = LÒ XO TÚI RUBY MASTERY
+url = https://tuananh.vn/lo-xo-tui-ruby-mastery-p444.html
 
 [dem24h.vn]
-match = 20.0%%
-title = Đệm Lò Xo Tuấn Anh Raina
-url = https://dem24h.vn/dem-lo-xo-tui-raina-korea
+match = -35.0%%
+title = Đệm Lò Xo Túi Cuộn Adaptive Tuấn Anh
+url = https://dem24h.vn/dem-lo-xo-tui-cuon-adaptive-tuan-anh
 
 [demviethome.vn]
 match = -140.0%%
