--- a/images/vo-goi-vuong-uc/config.ini
+++ b/images/vo-goi-vuong-uc/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-vuong-uc.html
 lastopen = 2024-06-06 16:45:20
 
 [search]
-lastsearch = 2024-07-30 20:10:10
+lastsearch = 2024-07-30 20:27:17
 
 [www.lazada.vn]
 match = -193.3%%
@@ -12,9 +12,9 @@ title = [Hot shxliuuioixoe 522] rồng Úc vỏ gối vuông vải lanh ...
 url = https://www.lazada.vn/products/hot-shxliuuioixoe-522-rong-uc-vo-goi-vuong-vai-lanh-polyester-nhung-mo-hinh-zip-goi-tua-lung-trang-tri-truong-hop-boc-goi-giuong-ngu-ban-buon-i2559065940.html
 
 [shopee.vn]
-match = 13.3%%
-title = Vỏ gối vuông Dollar 45-45cm
-url = https://shopee.vn/Vỏ-gối-vuông-Dollar-45-45cm-i.129451980.11513701819
+match = -140.0%%
+title = Rẻ Vô Địch Gối vuông tựa trang trí ( Gồm vỏ + ruột
+url = https://shopee.vn/Rẻ-Vô-Địch-Gối-vuông-tựa-trang-trí-(-Gồm-vỏ-ruột-Giá-tại-xưởng)-i.18055727.785277066
 
 [jysk.vn]
 match = -166.7%%
@@ -27,9 +27,9 @@ title = Vỏ Gối Vuông H'mông, Thổ Cẩm PIÊU - Brocade Decor - CHUS
 url = https://chus.vn/vo-goi-vuong-hmong/
 
 [ninhouse.vn]
-match = -126.7%%
-title = Mua Vỏ gối | Áo gối | Bao gối đẹp giá rẻ ...
-url = https://ninhouse.vn/collections/vo-goi
+match = -106.7%%
+title = Mua vỏ gối nằm | Áo gối ngủ đẹp giá rẻ ...
+url = https://ninhouse.vn/collections/vo-goi-nam
 
 [lepetit.com.vn]
 match = -6.7%%
@@ -127,9 +127,9 @@ title = Vỏ gối vuông lông
 url = https://gagoda.vn/san-pham/chi-tiet/vo_goi_vuong_long/6918
 
 [dienmaycholon.com]
-match = -100.0%%
-title = Vỏ Áo Gối Tựa Eco41 Cat giá rẻ, giao ngay
-url = https://dienmaycholon.com/goi-vo-goi/vo-ao-goi-tua-eco41-cat
+match = -33.3%%
+title = Gối & Vỏ Gối (Có 85 sản phẩm)
+url = https://dienmaycholon.com/goi-vo-goi
 
 [phedecor.com]
 match = 6.7%%
