--- a/images/tui-nem-korea-tuan-anh-16/config.ini
+++ b/images/tui-nem-korea-tuan-anh-16/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/tui-nem-korea-tuan-anh-16.html
 lastopen = 2024-06-17 10:42:58
 
 [search]
-lastsearch = 2024-07-30 20:08:29
+lastsearch = 2024-07-30 20:35:06
 
 [tuananh.vn]
-match = 12.0%%
-title = Đệm bông Adaptive Fiber 3M
-url = https://tuananh.vn/dem-bong-adaptive-3m-p345.html
+match = 22.2%%
+title = Đệm Korea Gấm Plus
+url = https://tuananh.vn/dem-korea-gam-plus-p223.html
 
 [demxanh.com]
-match = -28.0%%
-title = Đệm bông ép Tuấn Anh Korea gấm Plus chính hãng
-url = https://demxanh.com/dem-bong-ep-tuan-anh-korea-gam-plus.html
+match = -48.0%%
+title = [Cập nhật] Bảng giá đệm bông ép Tuấn Anh khuyến mại ...
+url = https://demxanh.com/bang-gia-dem-bong-ep-tuan-anh-2021.html
 
 [shopee.vn]
 match = -40.0%%
@@ -49,7 +49,7 @@ url = https://www.diepxuan.com/tui-nem-korea-tuan-anh-16.html
 [www.youtube.com]
 match = -16.7%%
 title = Đệm Tuấn Anh
-url = https://www.youtube.com/channel/UC1lyuex0oy3RBLBffNrjtMw/videos
+url = https://www.youtube.com/@emtuananh5547/videos
 
 [sieuthinem.com]
 match = 32.0%%
@@ -67,9 +67,9 @@ title = Jason Huynh (@jhuyner16) • Instagram photos and videos
 url = https://www.instagram.com/jhuyner16/?locale=怡+TG/飞机:@buth2788}wT4lf????????֤??ImGkE
 
 [www.facebook.com]
-match = -52.0%%
-title = ĐỆM TUẤN ANH - HƯỚNG DẪN SỬ DỤNG ĐỆM LÒ XO TÚI ...
-url = https://www.facebook.com/tuananh.vn/videos/đệm-tuấn-anh-hướng-dẫn-sử-dụng-đệm-lò-xo-túi-cuộn/592113711356270/
+match = 0.0%%
+title = Đệm Tuấn Anh - Đồng Hành Cùng Tổ Ấm
+url = https://www.facebook.com/photo.php?fbid=663632295792539&id=100064373242328&set=a.663634505792318
 
 [demviethome.vn]
 match = -40.0%%
