--- a/images/chan-5-kg-kq-song/config.ini
+++ b/images/chan-5-kg-kq-song/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-5-kg-kq-song.html
 lastopen = 2024-06-09 23:17:50
 
 [search]
-lastsearch = 2024-07-30 13:50:14
+lastsearch = 2024-07-30 20:38:53
 
 [en.wikipedia.org]
 match = -45.5%%
@@ -17,9 +17,9 @@ title = Yechan (xikers) - Kpop Wiki - Fandom
 url = https://kpop.fandom.com/wiki/Yechan_(xikers)
 
 [kprofiles.com]
-match = -70.6%%
-title = ATEEZ Members Profile (Updated!)
-url = https://kprofiles.com/ateez-members-profile/
+match = -76.5%%
+title = xikers Members Profile (Updated!)
+url = https://kprofiles.com/xikers-members-profile/
 
 [www.qsc.com]
 match = -188.2%%
@@ -32,9 +32,9 @@ title = Non-alcoholic fatty liver disease and colorectal cancer ...
 url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC6613648/
 
 [books.google.com]
-match = -11.8%%
-title = Cumulated Index Medicus
-url = https://books.google.com/books?id=KlBiDKi_dngC&pg=PA5960&lpg=PA5960&dq=chan+5+kg+kq+song&source=bl&ots=BOWWGJYo_d&sig=ACfU3U1LfuwN5Lbom6CoNrBz8tf3VysoUw&hl=en&sa=X&ved=2ahUKEwjG3peels6HAxUukYkEHbK_PaoQ6AF6BAgZEAM
+match = -200.0%%
+title = Reactive Oxygen Species in Chemistry, Biology, and Medicine
+url = https://books.google.com/books?id=p5LkBwAAQBAJ&pg=PA123&lpg=PA123&dq=chan+5+kg+kq+song&source=bl&ots=XG0u6t36Eh&sig=ACfU3U1tZbn705L1ihWFjY_ID7NAuzNMDA&hl=en&sa=X&ved=2ahUKEwjszd7J8c6HAxUIGTQIHZ7xC_wQ6AF6BAgYEAM
 
 [www.ateezstoryline.com]
 match = 0.0%%
@@ -87,9 +87,9 @@ title = Sl.No. QUESTION
 url = https://swr.indianrailways.gov.in/uploads/files/1574064319246-GK-final.pdf
 
 [www.quora.com]
-match = -176.5%%
-title = How much do you know about each member of the Korean ...
-url = https://www.quora.com/How-much-do-you-know-about-each-member-of-the-Korean-band-Stray-Kids-What-are-their-interests-hobbies-outside-of-music-Are-they-close-friends-in-real-life-as-well
+match = -129.4%%
+title = Does KQ Entertainment treat their idols well?
+url = https://www.quora.com/Does-KQ-Entertainment-treat-their-idols-well
 
 [msaniimusicgroup.org]
 match = 0.0%%
