--- a/images/ga-phu-es1804-160x200/config.ini
+++ b/images/ga-phu-es1804-160x200/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/ga-phu-es1804-160x200.html
 lastopen = 2024-07-01 16:45:20
 
 [search]
-lastsearch = 2024-07-30 18:31:36
+lastsearch = 2024-07-30 20:40:22
 
 [everonvn.com.vn]
-match = -171.4%%
-title = Bảng giá bộ chăn ga gối trẻ em Everon Trains họa tiết in đoàn ...
-url = https://everonvn.com.vn/everon/534/bo-tre-em-trains
+match = -114.3%%
+title = Bảng giá bán bộ chăn ga gối Everon Es1807 - Serenity ...
+url = https://everonvn.com.vn/everon/611/bo-everon-es1807
 
 [www.everonqb.com]
-match = -23.8%%
-title = Everon Quảng Bình Ga phủ EPC19056 200x220
-url = https://www.everonqb.com/ga-phu-epc19056-200x220.html
+match = -9.5%%
+title = Everon Quảng Bình Ga phủ EPC19056 160x200
+url = https://www.everonqb.com/ga-phu-epc19056-160x200.html
 
 [www.diepxuan.com]
 match = 14.3%%
@@ -22,9 +22,9 @@ title = Ga phủ ESM20013 180x200 - Điệp Xuân
 url = https://www.diepxuan.com/ga-phu-esm20013-180x200.html
 
 [muathongminh.vn]
-match = -119.0%%
-title = [Giảm 140.000 ₫] Chăn ga gối lụa thêu 100s “ kid luxury “
-url = https://muathongminh.vn/set-chan-ga-goi-phu-cotton-satin-p.1__5332956396__244837248
+match = -66.7%%
+title = Bộ chăn bốn mùa ga phủ vỏ gối EVERON ESM21011
+url = https://muathongminh.vn/bo-chan-bon-mua-ga-phu-vo-goi-everon-esm21011-p.1__5442067327__7352455
 
 [beecost.vn]
 match = -61.9%%
