CI images update

--- a/images/chieu-nhua-ha-noi-du-lich-180x400/config.ini
+++ b/images/chieu-nhua-ha-noi-du-lich-180x400/config.ini
@@ -9,7 +9,7 @@ lastsearch = 2024-07-30 20:33:04
 [www.diepxuan.com]
 match = 60.6%%
 title = Chiếu nhựa Hà Nội du lịch 180x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-nhua-ha-noi-du-lich-180x200.html
+url = https://www.diepxuan.com/chieu-nhua-ha-noi-du-lich-180x200.html?srsltid=AfmBOorkLmrCvP1aM2G5x_4pA3xOASMPDJrnZkkm25m5kbP7FgtiHFo8
 
 [shopee.vn]
 match = 9.1%%
