--- a/images/chieu-dieu-hoa-cao-su-180x200/config.ini
+++ b/images/chieu-dieu-hoa-cao-su-180x200/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-cao-su-180x200.html
 lastopen = 2024-07-01 06:28:11
 
 [search]
-lastsearch = 2024-07-30 20:33:19
+lastsearch = 2024-07-30 20:53:40
 
 [demxanh.com]
 match = 24.1%%
 title = Chiếu điều hòa cao su non đa sắc xám hình hoa
-url = https://demxanh.com/chieu-dieu-hoa-cao-su-non-da-sac-xam-hinh-hoa.html
+url = https://demxanh.com/chieu-dieu-hoa-cao-su-non-da-sac-xam-hinh-hoa.html?srsltid=AfmBOopX2_OjM2n0P-JXQGeYmHR_iuwrLG5KRS6EBxMD_tJ1gb44QeCV
 
 [leflair.com]
 match = 6.9%%
 title = Bộ Chiếu Cao Su Điều Hòa Mix 180x200 (3 Món)...
-url = https://leflair.com/shop/delete-bo-chieu-cao-su-ieu-hoa-mix-180x200-3-mon-16379
+url = https://leflair.com/shop/delete-bo-chieu-cao-su-ieu-hoa-mix-180x200-3-mon-16379?srsltid=AfmBOoo5H5Ysfmn-dy5irpx-oeo1kdmT0b0tcYDzArTx62DZXFsRZXYr
 
 [www.lazada.vn]
 match = -17.2%%
@@ -59,7 +59,7 @@ url = https://foreverbedding.net/chieu-dieu-hoa-cao-su-non-la-gi
 [www.diepxuan.com]
 match = 31.0%%
 title = Chiếu điều hòa caosu non 2D 180x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-dieu-hoa-caosu-non-2d-180x200.html
+url = https://www.diepxuan.com/chieu-dieu-hoa-caosu-non-2d-180x200.html?srsltid=AfmBOorsUnNR0CtP8-08RJljcFB7-dyDSMq-aynbGp8efU6oQ_qSkRCg
 
 [chiaki.vn]
 match = 10.3%%
