--- a/images/chieu-lac-gam-14/config.ini
+++ b/images/chieu-lac-gam-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-14.html
 lastopen = 2024-06-09 23:47:29
 
 [search]
-lastsearch = 2024-07-30 20:18:45
+lastsearch = 2024-07-30 20:59:02
 
 [www.diepxuan.com]
 match = 56.2%%
@@ -27,9 +27,9 @@ title = Chiếu Lác: Nơi bán giá rẻ, uy tín, chất lượng nhất
 url = https://websosanh.vn/s/chiếu+lác.htm
 
 [www.youtube.com]
-match = -218.8%%
-title = [ENG SUB] Cho thứ này vào pha bột BÁNH XÈO bánh giòn rất ...
-url = https://www.youtube.com/watch?v=hxI-i5jAeB8
+match = -181.2%%
+title = Nước lũ dâng cao, nhiều nơi chìm trong biển nước | VTC16
+url = https://www.youtube.com/watch?v=d0pMIC4bxBQ
 
 [tuyensinh247.com]
 match = -218.8%%
@@ -227,9 +227,9 @@ title = chelsea vs🍯 【WW88.game】Casino Online Châu Á
 url = https://hoanghaco.com.vn/ios/farmer_pyramid_summer/
 
 [www.facebook.com]
-match = -125.0%%
-title = LỄ BỐC THĂM CHIA CẶP... - Cao Thủ Liên Quân
-url = https://www.facebook.com/story.php/?story_fbid=1021633259632655&id=100053579700031
+match = -225.0%%
+title = Xin chào, Đại diện Obito và ekip, chúng tôi xin gửi tới các ...
+url = https://www.facebook.com/LovelyMimiFP/photos/nguyên-văn-xin-chào-đại-diện-obito-và-ekip-chúng-tôi-xin-gửi-tới-các-bạn-thông-t/1034333941815284/
 
 [baocaobang.vn]
 match = -218.8%%
@@ -480,4 +480,9 @@ url = https://vi.wikipedia.org/wiki/Hồ_Tây
 match = -37.5%%
 title = Kho video | Đài PT-TH ĐẮK NÔNG
 url = https://truyenhinhdaknong.vn/kho-video.htm
+
+[baoquangnam.vn]
+match = -212.5%%
+title = Lựa chọn cửa hàng độ đèn ô tô tại Đà Nẵng chất lượng uy tín
+url = https://baoquangnam.vn/lua-chon-cua-hang-do-den-o-to-tai-da-nang-chat-luong-uy-tin-3138748.html
 
