--- a/images/man-in-hoa-dep-18/config.ini
+++ b/images/man-in-hoa-dep-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-18.html
 lastopen = 2024-06-10 01:12:42
 
 [search]
-lastsearch = 2024-07-30 15:22:38
+lastsearch = 2024-07-30 20:47:42
 
 [idfpr.illinois.gov]
 match = -170.6%%
@@ -109,12 +109,12 @@ url = https://www.newhomesource.com/learn/8-surfire-ways-to-annoy-your-hoa/
 [www.leg.state.fl.us]
 match = -170.6%%
 title = The 2023 Florida Statutes (including Special Session C)
-url = http://www.leg.state.fl.us/statutes/index.cfm?App_mode=Display_Statute&URL=0700-0799/0720/0720.html
+url = http://www.leg.state.fl.us/statutes/index.cfm?App_mode=Display_Statute&URL=0700-0799/0720/Sections/0720.303.html
 
 [www.flsenate.gov]
 match = -129.4%%
 title = Chapter 720 Section 303 - 2018 Florida Statutes
-url = https://www.flsenate.gov/Laws/Statutes/2018/0720.303
+url = https://www.flsenate.gov/laws/statutes/2018/720.303
 
 [www.navy.mil]
 match = -23.5%%
@@ -277,9 +277,9 @@ title =
 url = http://www.dpor.virginia.gov/Boards/CIC-Board
 
 [sos.ga.gov]
-match = -135.3%%
-title = Business Division FAQ | Georgia Secretary of State
-url = https://sos.ga.gov/page/business-division-faq
+match = -70.6%%
+title = Georgia Secretary of State: Homepage
+url = https://sos.ga.gov/
 
 [www.lowermybills.com]
 match = 0.0%%
@@ -515,4 +515,9 @@ url = https://guides.sll.texas.gov/property-owners-associations/ccrs
 match = 0.0%%
 title = 
 url = https://www.news-journalonline.com/story/news/2024/07/03/new-florida-law-hoa-coa-poa-difference/74290647007/
+
+[oci.georgia.gov]
+match = -164.7%%
+title = Office of the Commissioner of Insurance and Safety Fire
+url = https://oci.georgia.gov/
 
