--- a/images/nem-caosu-lien-a-180x200x10-classic/config.ini
+++ b/images/nem-caosu-lien-a-180x200x10-classic/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-caosu-lien-a-180x200x10-classic.html
 lastopen = 2024-07-02 13:17:37
 
 [search]
-lastsearch = 2024-07-30 13:52:22
+lastsearch = 2024-07-30 21:01:07
 
 [nemgiakho.com]
 match = 11.4%%
@@ -79,5 +79,5 @@ url = https://shopee.vn/Đệm-cao-su-Liên-Á-Classic-180x200x10cm-CHÍNH-HÃNG
 [www.diepxuan.com]
 match = 45.7%%
 title = Nệm caosu Liên Á Classic 180x200x10 - Điệp Xuân
-url = https://www.diepxuan.com/nem-caosu-lien-a-classic-180x200x10.html?srsltid=AfmBOooS6Y2icFp6CGAaWN2VqgjRc2ellPbkGaxrjmR2fW4QjK02dlP7
+url = https://www.diepxuan.com/nem-caosu-lien-a-classic-180x200x10.html
 
