--- a/images/tui-korea-14/config.ini
+++ b/images/tui-korea-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-korea-14.html
 lastopen = 2024-06-17 10:35:06
 
 [search]
-lastsearch = 2024-07-30 17:58:30
+lastsearch = 2024-07-30 20:48:02
 
 [www.tui.co.uk]
-match = 0.0%%
-title = Buy South Korean won
-url = https://www.tui.co.uk/travel-money/buy-south-korean-won/
+match = -33.3%%
+title = Holiday Types 2024/25
+url = https://www.tui.co.uk/holidays
 
 [uk.trip.com]
 match = 0.0%%
@@ -147,9 +147,9 @@ title = German tour giant TUI profits from FTI bankrupcy
 url = https://uk.finance.yahoo.com/news/german-tour-giant-tui-profits-100635222.html
 
 [www.reuters.com]
-match = -275.0%%
-title = Jet2, TUI cancel flights to Rhodes because of wildfire
-url = https://www.reuters.com/world/europe/jet2-tui-cancel-flights-rhodes-because-wildfire-2023-07-23/
+match = -258.3%%
+title = TUI shares turn negative ahead of savings decisions
+url = https://www.reuters.com/article/world/tui-shares-turn-negative-ahead-of-savings-decisions-idUSL14490949/
 
 [www.mybaggage.com]
 match = -116.7%%
