--- a/images/bo-bon-mua-chun-chan-140x190/config.ini
+++ b/images/bo-bon-mua-chun-chan-140x190/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-chun-chan-140x190.html
 lastopen = 2024-06-06 16:45:05
 
 [search]
-lastsearch = 2024-07-30 20:15:02
+lastsearch = 2024-07-30 21:19:59
 
 [www.everonvn.vn]
 match = -50.0%%
@@ -19,12 +19,12 @@ url = https://everon.online/collections/chan-bon-mua-everon
 [www.diepxuan.com]
 match = 14.3%%
 title = Bộ chăn ga gấm Pyeoda - Điệp Xuân
-url = https://www.diepxuan.com/bo-chan-ga-gam-pyeoda.html
+url = https://www.diepxuan.com/bo-chan-ga-gam-pyeoda.html?srsltid=AfmBOoraPb_vJZ9zmo3Qr7YhaXGN-CoTGQ1pfNRHTU0O2yKLHzipDRSE
 
 [demxanh.com]
 match = -32.1%%
 title = Đệm bốn mùa Olympia Massage vải gấm xốp chính hãng
-url = https://demxanh.com/dem-bon-mua-olympia-massage-vai-gam-xop.html
+url = https://demxanh.com/dem-bon-mua-olympia-massage-vai-gam-xop.html?srsltid=AfmBOooLvXAgs3YdoiUKVjSQJjgGHwfbSZXRJ8PB_pQhmnMI56LLn-wY
 
 [everonminhkhai.com]
 match = -26.7%%
@@ -34,7 +34,7 @@ url = https://everonminhkhai.com/product-category/chan-ga-goi/bo-chan-ga/bo-chan
 [everonvn.com.vn]
 match = -32.1%%
 title = Đệm Bông Ép Vỏ Gấm Everon Giảm 20%% Hàng Chính Hãng
-url = https://everonvn.com.vn/everon/77/dem-bong-ep-everon
+url = https://everonvn.com.vn/everon/77/dem-bong-ep-everon?srsltid=AfmBOopqbZyo-rOjGOTY-t038GhnAf7wlQTI0Ws9a_uJt64kLuTyIxR8
 
 [changagoidemsonghong.com]
 match = -53.6%%
