--- a/images/chieu-dieu-hoa-khong-goi-re-18/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-re-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-re-18.html
 lastopen = 2024-06-09 22:26:11
 
 [search]
-lastsearch = 2024-07-30 18:47:47
+lastsearch = 2024-07-30 21:16:34
 
 [demxanh.com]
 match = -3.3%%
 title = Bảng giá chiếu điều hòa cao cấp giá tốt nhất tại ...
-url = https://demxanh.com/chieu-dieu-hoa.html?srsltid=AfmBOooSbMS6ST6tnJ5w_KnKFa32ux_KsB6WK8ombu5g-6JqFbkFk-vq
+url = https://demxanh.com/chieu-dieu-hoa.html
 
 [shopee.vn]
 match = -6.7%%
@@ -19,7 +19,7 @@ url = https://shopee.vn/blog/chieu-dieu-co-mat-khong/
 [demviethome.vn]
 match = 26.7%%
 title = Chiếu điều hòa Latex C18 giá rẻ hà nội. ...
-url = https://demviethome.vn/chieu-dieu-hoa-latex-c18/?srsltid=AfmBOorpWzfjG1bTjq_nzNl7awobGGVOw_dbaRCsvmYQdJsWYiQU-9S0
+url = https://demviethome.vn/chieu-dieu-hoa-latex-c18/
 
 [tiki.vn]
 match = 40.0%%
@@ -27,9 +27,9 @@ title = Chiếu điều hòa có mát không? Review 10 ...
 url = https://tiki.vn/blog/chieu-dieu-hoa/
 
 [suongtuyet.com]
-match = -13.3%%
-title = Có Mấy Loại Chiếu Điều Hòa? Chiếu Điều Hòa Loại Nào ...
-url = https://suongtuyet.com/nen-su-dung-chieu-dieu-hoa-loai-nao-chieu-dieu-hoa-loai-nao-tot.html
+match = 16.7%%
+title = có nên sử dụng chiếu điều hòa không?
+url = https://suongtuyet.com/chieu-dieu-hoa-co-nen-su-dung-chieu-dieu-hoa-khong.html
 
 [demchinhhang.com]
 match = 56.7%%
