--- a/images/chieu-lac-90x100/config.ini
+++ b/images/chieu-lac-90x100/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chieu-lac-90x100.html
 lastopen = 2024-06-20 22:28:06
 
 [search]
-lastsearch = 2024-07-30 19:26:14
+lastsearch = 2024-07-30 21:12:24
 
 [anlacphat.com]
 match = -118.8%%
-title = Đèn Led Chiếu Điểm Thanh Ray DIA808 7W Duhal
-url = https://anlacphat.com/den-led-chieu-diem-thanh-ray-dia808-7w-duhal/
+title = Đèn Led Chiếu Điểm Thanh Ray DIA807 5W Duhal
+url = https://anlacphat.com/den-led-chieu-diem-thanh-ray-dia807-5w-duhal/
 
 [thacoanlac.vn]
-match = -133.3%%
-title = FD700B
-url = https://thacoanlac.vn/forland-fd700b
+match = -180.0%%
+title = FD990
+url = https://thacoanlac.vn/forland-fd900
 
 [vietnamese.alibaba.com]
 match = -256.2%%
@@ -57,9 +57,9 @@ title = Y tế 100%% gạc hình gối bằng vải cotton 90X100
 url = https://vi.made-in-china.com/co_ti-care/product_Medical-100-Cotton-Pillow-Shaped-Gauze-Swab-90X100_ysrhnrrigg.html
 
 [www.diepxuan.com]
-match = 37.5%%
-title = Điệp Xuân Chiếu lác 90x100
-url = https://www.diepxuan.com/chieu-lac-90x100.html
+match = -68.8%%
+title = Chiếu gấp Thái Bình 180x300 - Điệp Xuân
+url = https://www.diepxuan.com/chieu-gap-thai-binh-180x300.html
 
 [www.thietbihiepphat.com]
 match = -43.8%%
