CI images update

--- a/images/chieu-lac-soc-18/config.ini
+++ b/images/chieu-lac-soc-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-18.html
 lastopen = 2024-06-06 16:53:55
 
 [search]
-lastsearch = 2024-07-30 18:36:30
+lastsearch = 2024-07-30 21:45:14
 
 [scholar.google.com]
 match = -43.8%%
@@ -680,4 +680,14 @@ url = https://thoibaotaichinhvietnam.vn/central-retail-giam-gia-den-49-gan-1000-
 match = -175.0%%
 title = VFF kỷ luật huấn luyện viên có ý định dàn xếp tỷ số
 url = https://baonghean.vn/vff-ky-luat-huan-luyen-vien-co-y-dinh-dan-xep-ty-so-10277278.html
+
+[kristin-gildemeister.de]
+match = -62.5%%
+title = Xinh Núm Tình Trên Lộ Bigo Vô Gái
+url = https://kristin-gildemeister.de/4721414-xinh-gái-tình-vô-lộ-núm-trên-bigo.html
+
+[www.momo.vn]
+match = -37.5%%
+title = Lịch chiếu phim CGV Aeon Tân Phú
+url = https://www.momo.vn/cinema/rap/cgv/cgv-aeon-tan-phu-21
 
