--- a/images/chieu-dieu-hoa-khong-goi-cao-su-16/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-cao-su-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-cao-su-16.html
 lastopen = 2024-06-09 23:20:09
 
 [search]
-lastsearch = 2024-07-30 20:13:38
+lastsearch = 2024-07-30 21:33:01
 
 [shopee.vn]
-match = 0.0%%
-title = Set 5 món chiếu điều hòa cao su non kèm chăn thun lạnh ...
-url = https://shopee.vn/Set-5-món-chiếu-điều-hòa-cao-su-non-kèm-chăn-thun-lạnh-chiếu-cao-su-non-trần-tim-chun-cài-4-góc-kèm-chăn-trần-bông-i.217274735.15698688208
+match = 8.8%%
+title = Chiếu điều hoà và 2 vỏ gối Latex cao su non loại 1 sẵn hàng
+url = https://shopee.vn/Chiếu-điều-hoà-và-2-vỏ-gối-Latex-cao-su-non-loại-1-sẵn-hàng-i.16397825.1036019362
 
 [olbedding.com]
 match = 11.8%%
@@ -22,9 +22,9 @@ title = Chiếu Điều Hòa Goni - Ưu Đãi Tháng 07/2024
 url = https://goni.vn/chieu-dieu-hoa-goni/
 
 [demxanh.com]
-match = 38.2%%
-title = Chiếu điều hòa cao su non vỏ bọc vải Tencel
-url = https://demxanh.com/chieu-dieu-hoa-cao-su-non.html
+match = 14.7%%
+title = Bảng giá chiếu điều hòa cao cấp giá tốt nhất tại ...
+url = https://demxanh.com/chieu-dieu-hoa.html
 
 [giadunganhvan.vn]
 match = 48.0%%
@@ -37,9 +37,9 @@ title = Chiếu Điều Hòa Cao Su Non
 url = https://www.facebook.com/groups/753270865357544/
 
 [khonemtonghop.com]
-match = 58.8%%
-title = Chiếu điều Hòa Cao Su Non Là Gì ...
-url = https://khonemtonghop.com/chieu-dieu-hoa-cao-su-non-la-gi/
+match = 30.0%%
+title = Chiếu Cao Su Non Có Tốt Không?
+url = https://khonemtonghop.com/chieu-cao-su-non-co-tot-khong/
 
 [suongtuyet.com]
 match = 17.6%%
