--- a/images/nem-sieu-nhe-9f-15/config.ini
+++ b/images/nem-sieu-nhe-9f-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-15.html
 lastopen = 2024-06-10 00:49:22
 
 [search]
-lastsearch = 2024-07-30 20:55:39
+lastsearch = 2024-07-30 21:38:24
 
 [www.lazada.vn]
 match = -94.4%%
@@ -33,8 +33,8 @@ url = https://cotienfoods.vn/blogs/an-ngon/khi-nao-nem-chua-chin
 
 [www.facebook.com]
 match = -94.4%%
-title = Bếp nhà Toronto 🇨🇦 | ☘️NEM CHUA LÁ ỔI 15$ 10 cái
-url = https://www.facebook.com/groups/396891758392980/posts/️nem-chua-lá-ổi-15-10-cái-nem-chua-thanh-hóa-20-15-cái-nem-chua-nhà-e-chuẩn-nem-/1218751472873667/
+title = LNS International Corporation | Houston TX
+url = https://www.facebook.com/lnsus2018/
 
 [voz.vn]
 match = 11.1%%
@@ -82,14 +82,14 @@ title = NEM NƯỚNG | Fast Food
 url = https://www.ministop.vn/en/product/detail?id=934
 
 [www.youtube.com]
-match = -111.1%%
-title = CÙNG VÀO BẾP LÀM NEM NƯỚNG NHA TRANG SIÊU HẤP ...
-url = https://www.youtube.com/watch?v=guu4UvG6cKY
+match = -177.8%%
+title = Đây là cách tạo ra món Bánh Bông Lan xốp mềm béo thơm ...
+url = https://www.youtube.com/watch?v=iS_07jVlezc
 
 [www.tiktok.com]
-match = -172.2%%
-title = Replying to @user74757483939 Brodard’s nem nuong sauce ...
-url = https://www.tiktok.com/@quyen_cooks/video/7216197212018068779?lang=en
+match = -38.9%%
+title = Chao Recipe Vietnamese Meatball
+url = https://www.tiktok.com/discover/chao-recipe-vietnamese-meatball
 
 [vi.wikipedia.org]
 match = -27.8%%
