--- a/images/vo-goi-ks-uc-50-70/config.ini
+++ b/images/vo-goi-ks-uc-50-70/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/vo-goi-ks-uc-50-70.html
 lastopen = 2024-06-10 00:52:12
 
 [search]
-lastsearch = 2024-07-30 20:11:33
+lastsearch = 2024-07-30 21:34:22
 
 [www.lazada.vn]
-match = -27.8%%
-title = Vỏ Gối 50x70 Trắng Giá Tốt T07/2024
-url = https://www.lazada.vn/tag/vo-goi-50x70-trang/
+match = -50.0%%
+title = Vo Goi Nằm 50×70 Cotton Giá Tốt T07/2024
+url = https://www.lazada.vn/tag/vo-goi-nam-50×70-cotton/
 
 [ru9.vn]
 match = -38.9%%
@@ -47,9 +47,9 @@ title = {search_title}
 url = {search_url}
 
 [ninhouse.vn]
-match = 43.8%%
-title = Vỏ gối khách sạn
-url = https://ninhouse.vn/products/vo-goi-khach-san
+match = 44.4%%
+title = Vỏ gối nằm Classic
+url = https://ninhouse.vn/collections/vo-goi-nam-classic
 
 [tonybed.vn]
 match = -100.0%%
@@ -167,9 +167,9 @@ title = Perspective on photonic memristive neuromorphic computing
 url = https://photonix.cn/cn/article/doi/10.1186/s43074-020-0001-6
 
 [sagatexvietnam.online]
-match = -122.2%%
-title = Vỏ Gối Khách Sạn 6 Sao, 100%% Cotton, Vải Dày, Mềm Mại
-url = https://sagatexvietnam.online/product/bao-goi-cao-cap-mau-trang-vai-t500-100-cotton-sagatex-viet-nam/
+match = -138.9%%
+title = Vỏ Gối Khách Sạn 5 Sao, Vải 100%% Cotton Cao Cấp, Mềm Mại
+url = https://sagatexvietnam.online/product/vo-goi-mau-trang-vai-t400-100-cotton-sagatex-50cmx70cm/
 
 [www.thecooperativelogisticsnetwork.com]
 match = -38.9%%
@@ -202,9 +202,9 @@ title = Talis S Single lever basin mixer 100 with pop-up waste set
 url = https://www.hansgrohe.com/articledetail-talis-s-single-lever-basin-mixer-100-with-pop-up-waste-set-72020000
 
 [pro.hansgrohe.com]
-match = -200.0%%
-title = Crometta S, Shower system 240 1jet with single lever mixer ...
-url = https://pro.hansgrohe.com/articledetail-crometta-s-shower-system-240-1jet-with-single-lever-mixer-27958000
+match = -138.9%%
+title = AXOR Universal Softsquare Shower door handle 444 mm
+url = https://pro.hansgrohe.com/articledetail-axor-universal-softsquare-shower-door-handle-444-mm-42837000
 
 [www.sciencedirect.com]
 match = -150.0%%
@@ -355,4 +355,9 @@ url = https://lf.downeyca.org/WebLink/DocView.aspx?id=793356&dbid=0&repo=Downey
 match = 0.0%%
 title = Economic Survey 2020-21
 url = https://www.indiabudget.gov.in/budget2021-22/economicsurvey/doc/echapter_vol2.pdf
+
+[baminh.com]
+match = 11.1%%
+title = Vỏ gối lụa khâu thủ công 50x70cm
+url = https://baminh.com/vo-goi-lua-khau-thu-cong-50x70cm
 
