--- a/images/bo-ga-chun-chan-bon-mua-200x220-tr/config.ini
+++ b/images/bo-ga-chun-chan-bon-mua-200x220-tr/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-200x220-tr.html
 lastopen = 2024-06-07 00:24:25
 
 [search]
-lastsearch = 2024-07-30 21:12:45
+lastsearch = 2024-07-30 21:45:46
 
 [everon.online]
 match = 50.0%%
@@ -14,7 +14,7 @@ url = https://everon.online/blogs/news/bo-ga-chun-chan-everon-bon-mua-bo-ga-boc-
 [everonvn.com.vn]
 match = -4.3%%
 title = Bộ chăn ga Everon SR-16
-url = https://everonvn.com.vn/everon/2248/bo-chan-ga-everon-sr-16?srsltid=AfmBOorLZUJ5hs2rLGHUYUbdx5-MT-0Bj3DlTmwZm792KxboqN1HRD7H
+url = https://everonvn.com.vn/everon/2248/bo-chan-ga-everon-sr-16?srsltid=AfmBOopEV2JezTXZzyXQRKos-uClqu4qay0rb39xA-wZrWC-Qz9zIQ5V
 
 [tiki.vn]
 match = 29.4%%
@@ -84,7 +84,7 @@ url = https://www.everonvn.vn/chi-tiet/everon-epm24060.html
 [demxanh.com]
 match = -2.9%%
 title = Bộ chăn ga gối cotton 5 món chăn hè ga chun chần 09
-url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-09.html
+url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-09.html?srsltid=AfmBOor7Zf7UV04XwsA6wuW9SWnf9HqtWp0qzRWlKAjLO5hsJrd1ye2M
 
 [antbedding.com]
 match = 26.5%%
