--- a/images/chieu-truc-thai-den14/config.ini
+++ b/images/chieu-truc-thai-den14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-thai-den14.html
 lastopen = 2024-06-09 23:36:30
 
 [search]
-lastsearch = 2024-07-30 17:24:51
+lastsearch = 2024-07-30 21:59:57
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -12,9 +12,9 @@ title = Chiếu trúc thai đen14
 url = https://www.diepxuan.com/chieu-truc-thai-den14.html
 
 [demxanh.com]
-match = -76.2%%
-title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
-url = https://demxanh.com/chieu-truc.html
+match = 14.3%%
+title = Chiếu Trúc cao cấp hạt Đen - Hà Nội
+url = https://demxanh.com/chieu-truc-den.html
 
 [www.lazada.vn]
 match = -81.0%%
@@ -77,9 +77,9 @@ title = Toàn ngành BHXH tập trung chi trả lương hưu theo mức ...
 url = https://dangcongsan.vn/bao-hiem-xa-hoi-bao-hiem-y-te-vi-an-sinh-xa-hoi/tin-tuc/toan-nganh-bhxh-tap-trung-chi-tra-luong-huu-theo-muc-huong-moi-ngay-tu-ngay-dau-671442.html
 
 [shopee.vn]
-match = -42.9%%
-title = chiếu trúc hạt vàng cước đỏ thái lan đủ kích cỡ
-url = https://shopee.vn/chiếu-trúc-hạt-vàng-cước-đỏ-thái-lan-đủ-kích-cỡ-i.194586860.3058965326
+match = -100.0%%
+title = chiếu tre thái lan loại 1 , hàng có sẵn m2xm9, m5x m9 ...
+url = https://shopee.vn/chiếu-tre-thái-lan-loại-1-hàng-có-sẵn-m2xm9-m5x-m9-m8x2m-2mx2m2-i.264060043.8153444972
 
 [baohungyen.vn]
 match = -4.8%%
@@ -632,7 +632,7 @@ title = XEM PHIM VUI NHẬN ƯU ĐÃI XỊN
 url = https://aeonmall-binhtan.com.vn/su-kien/xem-phim-vui-nhan-uu-dai-xin
 
 [www.vinmec.com]
-match = -4.8%%
-title = Sự phát triển của thai nhi tuần 8
-url = https://www.vinmec.com/vie/bai-viet/su-phat-trien-cua-thai-nhi-tuan-8-vi
+match = -57.1%%
+title = Giai đoạn hoàng thể và quá trình thụ thai
+url = https://www.vinmec.com/vie/bai-viet/giai-doan-hoang-va-qua-trinh-thu-thai-vi
 
