--- a/images/man-in-hoa-dep-14/config.ini
+++ b/images/man-in-hoa-dep-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-14.html
 lastopen = 2024-06-10 00:17:58
 
 [search]
-lastsearch = 2024-07-30 17:20:06
+lastsearch = 2024-07-30 21:58:12
 
 [www.rockawayinc.com]
 match = 0.0%%
@@ -42,9 +42,9 @@ title = HOA Bylaws, HOA Regulations, and CC&Rs
 url = https://spectrumam.com/everything-you-need-to-know-about-hoa-bylaws-regulations-and-ccrs/
 
 [www.quora.com]
-match = -176.5%%
-title = Can my HOA fine me if they haven't explained what I've ...
-url = https://www.quora.com/Can-my-HOA-fine-me-if-they-haven-t-explained-what-I-ve-done-wrong-They-sent-me-a-picture-2-weeks-ago-of-my-property-with-zero-context-or-explanation-of-what-s-wrong-Today-I-received-a-fine-Again-with-zero
+match = -217.6%%
+title = If I already live in a neighborhood, and HOA tries to claim it ...
+url = https://www.quora.com/If-I-already-live-in-a-neighborhood-and-HOA-tries-to-claim-it-am-I-forced-to-become-an-HOA-member
 
 [www.hopb.co]
 match = -141.2%%
@@ -77,9 +77,9 @@ title = Man who fought HOA over $500 mailbox and won says his ...
 url = https://www.washingtonpost.com/local/public-safety/man-who-fought-hoa-over-500-mailbox-and-won-says-his-mailbox-was-vandalized/2017/03/14/aacbdfc4-08cb-11e7-93dc-00f9bdd74ed1_story.html
 
 [www.tiktok.com]
-match = -41.2%%
-title = HOA fined me for this #hoa | hoa
-url = https://www.tiktok.com/@koltindarley/video/7317753084510342443?lang=en
+match = -82.4%%
+title = I need advice #lawyer #hoa #taylorswift
+url = https://www.tiktok.com/@koltindarley/video/7351825529915444522
 
 [www.steadily.com]
 match = 0.0%%
