--- a/images/tui-warmdream-14/config.ini
+++ b/images/tui-warmdream-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-warmdream-14.html
 lastopen = 2024-06-10 00:24:23
 
 [search]
-lastsearch = 2024-07-30 18:12:06
+lastsearch = 2024-07-30 21:58:55
 
 [www.diepxuan.com]
-match = -125.0%%
-title = Túi Warmdream 140x190x09 - Chăn ga gối đệm Điệp Xuân
-url = https://www.diepxuan.com/tui-warmdream-140x190x09.html?srsltid=AfmBOor3wQ2OLWRb18J8dS8Vek4Jr50cyqCSfKcpCo5Vnum5Wa9ZqJzn
+match = -131.2%%
+title = Túi Warmdream 180x200x09 - Chăn ga gối đệm Điệp Xuân
+url = https://www.diepxuan.com/tui-warmdream-180x200x09.html
 
 [demxanh.com]
 match = -181.2%%
